Avantage des dons de niv 2

--- a/data/feats/skill-02-4UXyMtXLaOxuH6Js.htm
+++ b/data/feats/skill-02-4UXyMtXLaOxuH6Js.htm
@@ -1,16 +1,13 @@
 Name: Distracting Performance
 Nom: Représentation de diversion
 PrereqEN: expert in Performance
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Créer une diversion pour un allié
+PrereqFR: expert en Représentation
+État: libre
 
 ------ Description (en) ------
 <p>Your performances are especially distracting, allowing your allies to sneak away with ease.</p>
 <p>When you @Compendium[pf2e.actionspf2e.HCl3pzVefiv9ZKQW]{Aid} an ally who is trying to @Compendium[pf2e.actionspf2e.GkmbTGfg8KcgynOA]{Create a Diversion}, instead of the usual effects of Aid, you can roll a Performance check and use that result to determine the outcome of the diversion, instead of the ally rolling a Deception check.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Représentation</p>
-<hr>
 <p>Vos représentations sont plus particulièrement divertissantes, permettant à vos alliés d'être facilement furtifs.</p>
 <p>Lorsque vous @Compendium[pf2e.actionspf2e.HCl3pzVefiv9ZKQW]{Aider} un allié qui essaie de @Compendium[pf2e.actionspf2e.GkmbTGfg8KcgynOA]{Créer une diversion}, au lieu des effets habituels d'Aider, vous pouvez faire une test de Représentation et utiliser le résultat pour détermine les conséquences de la diversion, à la place du test de Duperie de l'allié.</p>
