--- a/data/feats/class-06-xgvKXeTxns0gIdAn.htm
+++ b/data/feats/class-06-xgvKXeTxns0gIdAn.htm
@@ -3,8 +3,7 @@ Nom: Châtiment du mal
 PrereqEN: divine ally (blade)|tenets of good
 Avantage:
 PrereqFR: allié divin (lame)|préceptes du bien
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your blade ally becomes an even more powerful tool against evildoers.</p>
@@ -13,3 +12,4 @@ PrereqFR: allié divin (lame)|préceptes du bien
 <p>@Compendium[pf2e.feat-effects.AlnxieIRjqNqsdVu]{Effect: Smite Evil}</p>
 ------ Description (fr) ------
 <p>Votre allié lame devient un outil encore plus puissant contre les scélérats. Désignez un adversaire dans votre champ de vision. Jusqu’à la fin de votre prochain tour, vos Frappes contre cet adversaire, avec l’arme dans laquelle votre allié lame est logé, infligent 4 dégâts bons supplémentaires, 6 si vous êtes un maître avec cette arme. Si l’adversaire attaque l’un de vos alliés, la durée se prolonge jusqu’à la fin du prochain tour de l’adversaire. Si l’adversaire continue d’attaquer vos alliés chaque tour, la durée se prolonge à chaque fois.</p>
+<p>@Compendium[pf2e.feat-effects.AlnxieIRjqNqsdVu]{Effet: Châtiment du mal}</p>
