--- a/data/feats/skill-02-3ZerjLH8ls3JT6cD.htm
+++ b/data/feats/skill-02-3ZerjLH8ls3JT6cD.htm
@@ -1,7 +1,7 @@
 Name: Robust Recovery
 Nom: Récupération vigoureuse
 PrereqEN: expert in Medicine
-Avantage:
+Avantage: Avantages supérieurs pour Soigner une maladie ou Soigner un empoisonnement
 PrereqFR: expert en Médecine
 État: officielle
 
