--- a/data/feats/skill-02-BV5jpSifVJsTwoO7.htm
+++ b/data/feats/skill-02-BV5jpSifVJsTwoO7.htm
@@ -1,17 +1,16 @@
 Name: Wilderness Spotter
 Nom: Observateur des étendues sauvages
 PrereqEN: expert in Survival
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Utiliser Survie pour tirer l'initiative et remarquer les pièges sur un type de terrain
+PrereqFR: expert en Survie
+État: libre
 
 ------ Description (en) ------
 <p>Select one type of terrain from the following list: aquatic, arctic, desert, forest, mountain, plains, sky, swamp, or underground. You can use Survival in place of Perception to roll initiative when in the selected terrain in a natural location (not a structure) even if you weren't tracking or otherwise using Survival before the encounter. You can also use Survival instead of Perception to notice traps in natural locations in the chosen terrain; if you find a snare in this way, you can also use Survival instead of Thievery to Disable the Device.</p>
 <hr />
 <p><strong>Special</strong> You can select this feat more than once. Each time you select it, the feat applies to a new type of terrain.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Survie</p>
-<hr>
-<p><span>Choisissez un type de terrain sur la liste suivante : aquatique, arctique, ciel, désert, forêt, marais, montagne, plaines ou souterrains. Vous pouvez utiliser Survie au lieu de Perception pour déterminer l'initiative lorsque vous êtes sur le terrain choisi dans un lieu naturel (pas dans une structure) même si vous n'étiez pas en train de pister ou d'utiliser Survie avant la rencontre. Vous pouvez également utiliser Survie au lieu de Perception pour remarquer des pièges dans les lieux naturels sur le terrain choisi ; Si vous trouvez un piège artisanal de cette manière, vous pouvez utiliser aussi la Survi plutôt que Vol pour @Compendium[pf2e.actionspf2e.cYdz2grcOcRt4jk6]{Désamorcer le mécanisme}.</p>
-<p><span><strong>Spécial</strong> Vous pouvez choisir ce don plus d'une fois. Chaque fois que vous le sélectionnez, le don s'appliquer à un nouveau type de terrain.</span></p>
+<p>Choisissez un type de terrain sur la liste suivante : aquatique, arctique, ciel, désert, forêt, marais, montagne, plaines ou souterrains. Vous pouvez utiliser Survie au lieu de Perception pour déterminer l'initiative lorsque vous êtes sur le terrain choisi dans un lieu naturel (pas dans une structure) même si vous n'étiez pas en train de pister ou d'utiliser Survie avant la rencontre.</p>
+<p>Vous pouvez également utiliser Survie au lieu de Perception pour remarquer des pièges dans les lieux naturels sur le terrain choisi ; Si vous trouvez un piège artisanal de cette manière, vous pouvez utiliser aussi la Survie plutôt que Vol pour @Compendium[pf2e.actionspf2e.cYdz2grcOcRt4jk6]{Désamorcer le mécanisme}.</p>
+<hr />
+<p><strong>Spécial</strong> Vous pouvez choisir ce don plus d'une fois. Chaque fois que vous le sélectionnez, le don s'appliquer à un nouveau type de terrain.</p>
