avantages dans les dons de compétence

--- a/data/feats/skill-02-6Z4e3B9vePYpibcy.htm
+++ b/data/feats/skill-02-6Z4e3B9vePYpibcy.htm
@@ -1,14 +1,11 @@
 Name: Confabulator
 Nom: Affabulateur
 PrereqEN: expert in Deception
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Réduire les bonus contre vos mensonges répétés
+PrereqFR: expert en Duperie
+État: officielle
 
 ------ Description (en) ------
 <p>Even when caught in falsehoods, you pile lie upon lie. Reduce the circumstance bonus a target gains for your previous attempts to Create a Diversion or Lie to it from +4 to +2. If you're a master in Deception, reduce the bonus to +1, and if you're legendary, your targets don't get these bonuses at all.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Prérequis </strong> expert en Duperie<br></span></p>
-<hr>
-<p>Même quand vous êtes pris à mentir, vous rajoutez mensonge sur mensonge. Réduisez le bonus de circonstances qu’une cible gagne pour votre tentative précédente de Faire diversion ou de lui Mentir de +4 à +2. Si vous êtes un maître en Duperie, réduisez le bonus à +1, et si vous êtes légendaire, vos cibles ne reçoivent pas de bonus du tout.&nbsp;</p>
+<p>Même quand vous êtes pris à mentir, vous rajoutez mensonge sur mensonge. Réduisez le bonus de circonstances qu’une cible gagne pour votre tentative précédente de Faire diversion ou de lui Mentir de +4 à +2. Si vous êtes un maître en Duperie, réduisez le bonus à +1, et si vous êtes légendaire, vos cibles ne reçoivent pas de bonus du tout.</p>
