--- a/data/feats/skill-02-H3I2X0f7v4EzwxuN.htm
+++ b/data/feats/skill-02-H3I2X0f7v4EzwxuN.htm
@@ -1,10 +1,9 @@
 Name: Automatic Knowledge
 Nom: Savoir automatique
 PrereqEN: expert in a skill with the recall knowledge action|Assurance in that skill
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Se souvenir par une action gratuite une fois par round
+PrereqFR: expert dans une compétence avec l’action Se souvenir|Assurance dans cette compétence
+État: officielle
 
 ------ Description (en) ------
 <p>You know basic facts off the top of your head. Choose a skill you're an expert in that has the Recall Knowledge action and for which you have the Assurance feat. You can use the Recall Knowledge action with that skill as a free action once per round. If you do, you must use Assurance on the skill check.</p>
