--- a/data/feats/skill-02-XWsLzllAjrW8LYT5.htm
+++ b/data/feats/skill-02-XWsLzllAjrW8LYT5.htm
@@ -1,7 +1,7 @@
 Name: Wilderness Spotter (Swamp)
 Nom: Observateur des étendues sauvages (Marais)
 PrereqEN: expert in Survival
-Avantage:
+Avantage: Utiliser Survie pour tirer l'initiative et remarquer les pièges sur un type de terrain
 PrereqFR: expert en Survie
 État: libre
 
