--- a/data/feats/skill-02-cmuvvPJvt2R16vGe.htm
+++ b/data/feats/skill-02-cmuvvPJvt2R16vGe.htm
@@ -1,7 +1,7 @@
 Name: Fresh Ingredients
 Nom: Ingrédients frais
 PrereqEN: Herbalist Dedication|expert in Nature
-Avantage:
+Avantage: Obtenir un bonus en utilisant des ingrédients naturels pour soigner les blessures
 PrereqFR: Dévouement d'Herboriste|expert en Nature
 État: libre
 
