--- a/data/feats/skill-02-pWYWXSk2ghyqRBTP.htm
+++ b/data/feats/skill-02-pWYWXSk2ghyqRBTP.htm
@@ -1,7 +1,7 @@
 Name: Wilderness Spotter (Mountain)
 Nom: Observateur des étendues sauvages (Montagne)
 PrereqEN: expert in Survival
-Avantage:
+Avantage: Utiliser Survie pour tirer l'initiative et remarquer les pièges sur un type de terrain
 PrereqFR: expert en Survie
 État: libre
 
