--- a/data/feats/skill-02-6vnbC90UQ3I57RrQ.htm
+++ b/data/feats/skill-02-6vnbC90UQ3I57RrQ.htm
@@ -1,14 +1,11 @@
 Name: Lasting Coercion
 Nom: Contrainte durable
 PrereqEN: expert in Intimidation
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Contraindre une cible à vous aider plus longtemps
+PrereqFR: expert en Intimidation
+État: officielle
 
 ------ Description (en) ------
 <p>When you successfully Coerce someone, the maximum time they comply increases to a week, still determined by the GM. If you're legendary, the maximum increases to a month.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Intimidation</p>
-<hr>
 <p>Quand vous réussissez à Contraindre quelqu’un, le temps maximum pendant lequel il se soumet augmente à une semaine, toujours déterminé par le MJ. Si vous êtes légendaire, le maximum augmente à un mois.</p>
