--- a/data/feats/skill-02-8c61nOIr5AM3KxZi.htm
+++ b/data/feats/skill-02-8c61nOIr5AM3KxZi.htm
@@ -1,14 +1,11 @@
 Name: Ward Medic
 Nom: Infirmier
 PrereqEN: expert in Medicine
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Soigner plusieurs patients à la fois
+PrereqFR: expert en Médecine
+État: officielle
 
 ------ Description (en) ------
 <p>You've studied in large medical wards, treating several patients at once and tending to all their needs. When you use Treat Disease or Treat Wounds, you can treat up to two targets. If you're a master in Medicine, you can treat up to four targets, and if you're legendary, you can treat up to eight targets.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Médecine</p>
-<hr>
 <p>Vous avez étudié dans de grands services médicaux, traitant plusieurs patients à la fois et répondant à tous leurs besoins. Quand vous utilisez Soigner une maladie ou Soigner les blessures, vous pouvez traiter jusqu’à deux cibles. SI vous êtes un maître en Médecine, vous pouvez traiter jusqu’à quatre cibles, et jusqu’à huit si vous êtes légendaire.</p>
