--- a/data/feats/skill-02-BWTE31PHCWc1txlw.htm
+++ b/data/feats/skill-02-BWTE31PHCWc1txlw.htm
@@ -1,7 +1,7 @@
 Name: Wilderness Spotter (Desert)
 Nom: Observateur des étendues sauvages (Désert)
 PrereqEN: expert in Survival
-Avantage:
+Avantage: Utiliser Survie pour tirer l'initiative et remarquer les pièges sur un type de terrain
 PrereqFR: expert en Survie
 État: libre
 
