--- a/data/feats/skill-02-EATCTjJ2tGKFmlEY.htm
+++ b/data/feats/skill-02-EATCTjJ2tGKFmlEY.htm
@@ -1,7 +1,7 @@
 Name: Wilderness Spotter (Arctic)
 Nom: Observateur des étendues sauvages (Arctique)
 PrereqEN: expert in Survival
-Avantage:
+Avantage: Utiliser Survie pour tirer l'initiative et remarquer les pièges sur un type de terrain
 PrereqFR: expert en Survie
 État: libre
 
