--- a/data/feats/skill-02-FJK7JTLSgugRIlvS.htm
+++ b/data/feats/skill-02-FJK7JTLSgugRIlvS.htm
@@ -1,14 +1,11 @@
 Name: Rapid Mantel
 Nom: Accroche rapide
 PrereqEN: expert in Athletics
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Se hisser rapidement sur les corniches
+PrereqFR: expert en Athlétisme
+État: officielle
 
 ------ Description (en) ------
 <p>You easily pull yourself onto ledges. When you Grab an Edge, you can pull yourself onto that surface and stand. You can use Athletics instead of a Reflex save to Grab an Edge.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Athlétisme</p>
-<hr>
 <p>Vous vous hissez facilement sur les corniches. Quand vous Vous raccrochez in extremis, vous pouvez vous hisser sur la surface et y tenir. Vous pouvez utiliser Athlétisme au lieu d’un jet de sauvegarde de Réflexes pour Vous raccrocher in extremis.</p>
