--- a/data/feats/skill-02-c85a69mB1urW2Se2.htm
+++ b/data/feats/skill-02-c85a69mB1urW2Se2.htm
@@ -1,14 +1,11 @@
 Name: Continual Recovery
 Nom: Récupération continue
 PrereqEN: expert in Medicine
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Soigner les blessures sur un patient plus souvent
+PrereqFR: expert en Médecine
+État: officielle
 
 ------ Description (en) ------
 <p>You zealously monitor a patient's progress to administer treatment faster. When you @Compendium[pf2e.actionspf2e.1kGNdIIhuglAjIp9]{Treat Wounds}, your patient becomes immune for only 10 minutes instead of 1 hour. This applies only to your Treat Wounds activities, not any other the patient receives.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis </strong> expert en Médecine</p>
-<hr>
-<p>Vous surveillez avec zèle l’évolution du patient pour administrer plus vite son traitement. Quand vous Soignez les blessures, votre patient devient immunisé pour seulement 10 minutes au lieu de 1 heure. Cela s’applique uniquement à vos activités visant à Soigner les blessures, pas à toute autre activité dont bénéfice votre patient.</p>
+<p>Vous surveillez avec zèle l’évolution du patient pour administrer plus vite son traitement. Quand vous Soignez les blessures, votre patient devient immunisé pour seulement 10 minutes au lieu de 1 heure. Cela s’applique uniquement à vos activités visant à Soigner les blessures, pas à toute autre activité dont bénéficie votre patient.</p>
