--- a/data/feats/skill-02-dUnT3HWMFD3d2eBJ.htm
+++ b/data/feats/skill-02-dUnT3HWMFD3d2eBJ.htm
@@ -1,16 +1,19 @@
 Name: Encouraging Words
 Nom: Paroles encourageantes
 PrereqEN: trained in Diplomacy
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Vous tenez un bref discours d'encouragement qui encourage votre allié à récupérer
+PrereqFR: qualifié en Diplomatie
+État: libre
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> The target ally lost Stamina Points within the last round.<br /></p>
 <hr />
 <p>You give an ally within 30 feet a quick pep talk, helping them recover. Attempt a Diplomacy check. The DC is usually 15, though the GM might adjust it based on the circumstances. If you have expert proficiency in Diplomacy, you can instead attempt a DC 20 check to increase the Stamina Points recovered by 5; if you have master proficiency, you can attempt a DC 30 check to increase the Stamina Points by 15; if you have legendary proficiency, you can attempt a DC 40 check to increase the Stamina Points by 25. No matter the result, the ally is temporarily immune to Encouraging Words until they either @Compendium[pf2e.actionspf2e.qc0VsZ0UesnurUUB]{Take a Breather} or rest for the day. <br /><br /><strong>Critical Success</strong> The ally recovers 2d8 Stamina Points.<br /><strong>Success</strong> The ally recovers 1d8 Stamina Points.<br /><strong>Critical Failure</strong> The ally takes 1d8 mental damage, but this can reduce only Stamina Points, never Hit Points.</p>
 ------ Description (fr) ------
-<p><span><strong>Prérequis</strong> qualifié en Diplomatie<br><strong>Conditions</strong> La cible alliée a perdu des points d'Endurance au cours du dernier round.<br></span></p>
-<hr>
-<p>Vous tenez à un allié dans les 9m un bref discours d'encouragement, l'aidant à récupérer. Faites un test de Diplomatie. Le DD est habituellement de 15, bien que le MJ puisse l'ajuster en fonction des circonstances. Si vous êtes expert en Diplomatie, vous pouvez faire un test contre un DD 20 pour augmenter le nombre de points d'Endurance récupérés de 5 ; si vous êtes maître, vous pouvez tenter un test contre un DD 30 pour augmenter le nombre de points d'Endurance de 15 ; si vous êtes légendaire, vous pouvez faire un test contre un DD 40 pour augmenter les points d'Endurance de 25. Quel que soit le résultat, l'allié est temporairement immunisé aux Paroles d'encouragement jusqu'à ce qu'il ait soit @Compendium[pf2e.actionspf2e.qc0VsZ0UesnurUUB]{Repris son souffle} ou qu'il se soit reposé au cours de la journée. <br><br><strong>Succès critique</strong> L'allié récupère 2d8 points d'Endurance.<br><strong>Succès</strong> L'allié récupère 1d8 Points d'Endurance.<br><strong>Échec critique</strong> L'allié subit 1d8 dégâts mentaux, mais cela ne peut que réduire les Points d'Endurance, jamais les Points de Vie.&nbsp;</p>
+<p><strong>Conditions</strong> La cible alliée a perdu des points d'Endurance au cours du dernier round.</p>
+<hr />
+<p>Vous tenez à un allié dans les 9 m un bref discours d'encouragement, l'aidant à récupérer. Faites un test de Diplomatie. Le DD est habituellement de 15, bien que le MJ puisse l'ajuster en fonction des circonstances. Si vous êtes expert en Diplomatie, vous pouvez faire un test contre un DD 20 pour augmenter le nombre de points d'Endurance récupérés de 5 ; si vous êtes maître, vous pouvez tenter un test contre un DD 30 pour augmenter le nombre de points d'Endurance de 15 ; si vous êtes légendaire, vous pouvez faire un test contre un DD 40 pour augmenter les points d'Endurance de 25. Quel que soit le résultat, l'allié est temporairement immunisé aux Paroles d'encouragement jusqu'à ce qu'il ait soit @Compendium[pf2e.actionspf2e.qc0VsZ0UesnurUUB]{Repris son souffle} ou qu'il se soit reposé au cours de la journée.</p>
+<hr />
+<p><strong>Succès critique</strong> L'allié récupère 2d8 points d'Endurance</p>
+<p><strong>Succès</strong> L'allié récupère 1d8 Points d'Endurance.</p>
+<p><strong>Échec critique</strong> L'allié subit 1d8 dégâts mentaux, mais cela ne peut que réduire les Points d'Endurance, jamais les Points de Vie.</p>
