--- a/data/feats/skill-02-gEkGIRX4bXbMHZ2W.htm
+++ b/data/feats/skill-02-gEkGIRX4bXbMHZ2W.htm
@@ -1,7 +1,7 @@
 Name: Wilderness Spotter (Aquatic)
 Nom: Observateur des étendues sauvages (Aquatique)
 PrereqEN: expert in Survival
-Avantage:
+Avantage: Utiliser Survie pour tirer l'initiative et remarquer les pièges sur un type de terrain
 PrereqFR: expert en Survie
 État: libre
 
