--- a/data/feats/skill-02-gjWpnUYOWvTuphET.htm
+++ b/data/feats/skill-02-gjWpnUYOWvTuphET.htm
@@ -1,7 +1,7 @@
 Name: Wilderness Spotter (Forest)
 Nom: Observateur des étendues sauvages (Forêt)
 PrereqEN: expert in Survival
-Avantage:
+Avantage: Utiliser Survie pour tirer l'initiative et remarquer les pièges sur un type de terrain
 PrereqFR: expert en Survie
 État: libre
 
