Avantage des dons de compétence

--- a/data/feats/skill-02-mEk2POFNU1Q0TQg2.htm
+++ b/data/feats/skill-02-mEk2POFNU1Q0TQg2.htm
@@ -1,14 +1,11 @@
 Name: Mortal Healing
 Nom: Soins mortels
 PrereqEN: Godless Healing|You follow the Laws of Mortality
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Vous dispensez de meilleurs soins lorsque les dieux n'interfèrent pas
+PrereqFR: Soins profanes|vous suivez les Lois de la Mortalité
+État: libre
 
 ------ Description (en) ------
 <p>You grant greater healing when the gods don't interfere. When you roll a success to @Compendium[pf2e.actionspf2e.1kGNdIIhuglAjIp9]{Treat Wounds} for a creature that hasn't regained Hit Points from divine magic in the past 24 hours, you get a critical success on your check instead and restore the corresponding amount of Hit Points.</p>
 ------ Description (fr) ------
-<p><span><strong>Prérequis</strong> Soins profanes, vous suivez les Lois de la Mortalité<br></span></p>
-<hr>
-<p>Vous obtenez de meilleurs soins lorsque les dieux n'interfèrent pas. Lorsque vous obtenez un succès pour @Compendium[pf2e.actionspf2e.1kGNdIIhuglAjIp9]{Soigner les blessures} pour une créature qui n'a pas regagné des Points de Vie de magie divine au cours des dernières 24 heures, vous obtenez un succès critique sur votre test à la place et restaure le montant correspondant de Points de Vie.&nbsp;</p>
+<p>Vous dispensez de meilleurs soins lorsque les dieux n'interfèrent pas. Lorsque vous obtenez un succès pour @Compendium[pf2e.actionspf2e.1kGNdIIhuglAjIp9]{Soigner les blessures} d'une créature qui n'a pas regagné des Points de Vie de magie divine au cours des dernières 24 heures, vous obtenez un succès critique sur votre test à la place et restaurez le montant correspondant de Points de Vie.</p>
