--- a/data/feats/skill-02-pekKtubQTkG9m1xK.htm
+++ b/data/feats/skill-02-pekKtubQTkG9m1xK.htm
@@ -1,14 +1,11 @@
 Name: Quiet Allies
 Nom: Alliés silencieux
 PrereqEN: expert in Stealth
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Effectuer un seul test de Discrétion quand vous Êtes furtif avec des alliés
+PrereqFR: expert en Discrétion
+État: officielle
 
 ------ Description (en) ------
 <p>You're skilled at moving with a group. When you are Avoiding Notice and your allies Follow the Expert, you and those allies can roll a single Stealth check, using the lowest modifier, instead of rolling separately. This doesn't apply for initiative rolls.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Discrétion</p>
-<hr>
 <p>Vous êtes habile à vous déplacer avec un groupe. Quand vous Échappez aux regards et que vos alliés Suivent l’expert, vous et ces alliés pouvez effectuer un test de Discrétion unique, en utilisant le modificateur le plus bas, au lieu d’effectuer vos tests séparément. Cela ne s’applique pas aux jets d’initiative.</p>
