--- a/data/feats/skill-02-HJYQlmGTdtyGWr6a.htm
+++ b/data/feats/skill-02-HJYQlmGTdtyGWr6a.htm
@@ -1,14 +1,11 @@
 Name: Powerful Leap
 Nom: Bond puissant
 PrereqEN: expert in Athletics
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Sauter plus loin et plus haut
+PrereqFR: expert en Athlétisme
+État: officielle
 
 ------ Description (en) ------
 <p>When you Leap, you can jump 5 feet up with a vertical Leap, and you increase the distance you can jump horizontally by 5 feet.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Athlétisme</p>
-<hr>
-<p>Quand vous Bondissez, vous pouvez sauter 1,5 m avec un Bond vertical, et vous augmentez la distance que vous pouvez sauter horizontalement de 1,5 m.</p>
+<p>Quand vous Bondissez, vous pouvez sauter 1,5 m avec un Bond vertical et vous augmentez la distance que vous pouvez sauter horizontalement de 1,5 m.</p>
