--- a/data/feats/skill-02-LDUWw2TeEEH0KA6M.htm
+++ b/data/feats/skill-02-LDUWw2TeEEH0KA6M.htm
@@ -1,14 +1,11 @@
 Name: Criminal Connections
 Nom: Réseau criminel
 PrereqEN: expert in Society|Streetwise
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Compter sur vos relations dans la pègre pour obtenir des faveurs de criminels
+PrereqFR: expert en Société|Savoir urbain
+État: officielle
 
 ------ Description (en) ------
 <p>You have dealings with a variety of unsavory characters, which you can leverage to trade favors or meet powerful people. When you're in an area where you have connections (typically a settlement where you've spent downtime building connections or possibly another area in the same nation), you can attempt a Society check to arrange a meeting with an important criminal, such as a thieves' guild leader, or ask for a favor in exchange for a later favor of your contact's choice. The GM decides the DC based on the difficulty of the favor and the figure's prominence.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Société, @Compendium[pf2e.feats-srd.X2jGFfLU5qI5XVot]{Savoir urbain}</p>
-<hr>
-<p>Vous avez eu des relations avec des personnages peu recommandables que vous pouvez utiliser comme leviers pour échanger des faveurs ou pour rencontrer des gens puissants. Lorsque vous êtes dans une zone ou vous avez des relations (typiquement un endroit ou vous avez pu passer du temps d'intermède à établir des relations ou possiblement un autre endroit dans la même nation), vous pouvez faire un test de Société pour arranger une rencontre avec un criminel important, comme le chef d'une guilde de voleur ou pour demander une faveur en échange d'une autre plus tard, du choix de votre contact. Le MJ décide du DD sur lequel est basé la difficulté de la faveur et l'importance de votre contact.</p>
+<p>Vous avez eu des relations avec des personnages peu recommandables que vous pouvez utiliser comme leviers pour échanger des faveurs ou pour rencontrer des gens puissants. Lorsque vous êtes dans une zone ou vous avez des relations (typiquement un endroit ou vous avez pu passer du temps d'intermède à établir des relations ou possiblement un autre endroit dans la même nation), vous pouvez faire un test de Société pour arranger une rencontre avec un criminel important, comme le chef d'une guilde de voleur ou pour demander une faveur en échange d'une autre plus tard, du choix de votre contact. Le MJ décide du DD sur lequel est basé la difficulté de la faveur et l'importance de la personnalité.</p>
