--- a/data/feats/skill-02-OtV7esAwza1U6Kwr.htm
+++ b/data/feats/skill-02-OtV7esAwza1U6Kwr.htm
@@ -1,10 +1,9 @@
 Name: Eye of the Arclords
 Nom: Œil des Seigneurs de l'Arc
 PrereqEN: expert in Arcana|Arcane Sense
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Les Seigneurs de l'arc de Nex ont atteint une maîtrise unique de la magie.
+PrereqFR: expert en Arcanes|Sens arcanique
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -22,7 +21,6 @@ PrereqFR:
 <p>After your third eye closes, you are dazzled for an amount of time equal to how long you had it open.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
-<p><strong>Prérequis</strong> expert en Arcanes, Sens arcanique</p>
-<p><strong>Access</strong> Vous êtes membre des Seigneurs de l'Arc du Nex.</p>
+<p><strong>Accès</strong> Vous êtes membre des Seigneurs de l'Arc du Nex.</p>
 <hr>
 <p>Un troisième œil incandescent s’ouvre sur votre front. Il peut rester ouvert jusqu’à une minute. Vous pouvez le fermer avant cela avec une action unique dotée du trait concentration. Il peut rester ouvert 2 minutes si vous êtes maître en Arcanes et 5 min si vous êtes légendaire. Tant que l’œil est ouvert, vous bénéficiez des avantages suivants : vous gagnez les effets du sort arcanique inné détection de la magie issu de votre Sens arcanique au début de chacun de vos tours, sans avoir besoin de le lancer ; vous gagnez @Compendium[pf2e.spells-srd.pZTqGY1MLRjgKasV]{vision dans le noir} ; vous gagnez un bonus de statut de +2 aux tests de Perception pour @Compendium[pf2e.actionspf2e.BlAOM2X92SI6HMtJ]{Chercher} une créature @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{non détectée} ou @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{cachée} et au DD de vos tests de Perception contre @Compendium[pf2e.actionspf2e.XMcnh4cSI32tljXa]{Se cacher} et @Compendium[pf2e.actionspf2e.VMozDqMMuK5kpoX4]{Être furtif}. Une fois que votre troisième œil se ferme, vous êtes @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{ébloui} pendant aussi longtemps que vous l’avez gardé ouvert.</p>
