--- a/data/feats/skill-02-QvBIYW6aAqoiyim3.htm
+++ b/data/feats/skill-02-QvBIYW6aAqoiyim3.htm
@@ -1,16 +1,13 @@
 Name: Exhort The Faithful
 Nom: Exhorter les croyants
 PrereqEN: expert in Religion|follower of a specific religion
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Bonus de +2 +2 Pour Solliciter ou Contraindre des membres de votre propre foi.
+PrereqFR: expert en Religion|suivant d'une religion particulière
+État: libre
 
 ------ Description (en) ------
 <p>Your knowledge of the tenets of your faith gives you insight into the best ways to get others of your faith to help you or to follow your directions.</p>
 <p>When you @Compendium[pf2e.actionspf2e.DCb62iCBrJXy0Ik6]{Request} something of or @Compendium[pf2e.actionspf2e.tHCqgwjtQtzNqVvd]{Coerce} members of your own faith, you can attempt a Religion check instead of Diplomacy or Intimidation, and you gain a +2 circumstance bonus to the check. On a critically failed attempt to make a Request, the target's attitude toward you doesn't worsen.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Religion, suivant d'une religion particulière</p>
-<hr>
 <p>Votre connaissance des canons de votre foi vous donne l'intuition pour déterminer la meilleure manière d'obtenir de ceux qui partagent vote foi à vous aider ou à suivre vos directives.</p>
-<p>Lorsque vous <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="DCb62iCBrJXy0Ik6" draggable="true"><i class="fas fa-suitcase"></i>Sollicitez</a> quelque chose ou <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="tHCqgwjtQtzNqVvd" draggable="true"><i class="fas fa-suitcase"></i>Contraignez</a> des membres de votre propre croyance, vous pouvez tenter un test de Religion au lieu de Diplomatie ou d'Intimidation et vous obtenez un bonus de circonstances de +2 au test. En cas d'Échec critique en tenant de Solliciter, l'attitude de la cible à votre endroit n'empire pas.</p>
+<p>Lorsque vous @Compendium[pf2e.actionspf2e.DCb62iCBrJXy0Ik6]{Sollicitez} quelque chose ou @Compendium[pf2e.actionspf2e.tHCqgwjtQtzNqVvd]{Contraignez} des membres de votre propre croyance, vous pouvez tenter un test de Religion au lieu de Diplomatie ou d'Intimidation et vous obtenez un bonus de circonstances de +2 au test. En cas d'Échec critique en tenant de Solliciter, l'attitude de la cible à votre endroit n'empire pas.</p>
