--- a/data/feats/skill-02-RLBYJiGMVkaGL5w9.htm
+++ b/data/feats/skill-02-RLBYJiGMVkaGL5w9.htm
@@ -1,14 +1,11 @@
 Name: Wary Disarmament
 Nom: Désarmement prudent
 PrereqEN: expert in Thievery
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: +2 à la CA ou aux jets de sauvegarde contre les dispositifs ou pièges que vous déclenchez en les désarmant
+PrereqFR: expert en Vol
+État: officielle
 
 ------ Description (en) ------
 <p>If you trigger a device or set off a trap while disarming it, you gain a +2 circumstance bonus to your AC or saving throw against the device or trap. This applies only to attacks or effects triggered by your failed attempt, not to any later ones, such as additional attacks from a complex trap.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis </strong> expert en Vol</p>
-<hr>
 <p>Si vous déclenchez un dispositif ou un piège pendant que vous le désarmez, vous gagnez un bonus de circonstances de +2 à votre CA ou à votre jet de sauvegarde contre l’appareil ou le piège. Cela s’applique seulement à l’attaque ou aux effets déclenchés par votre tentative ratée, et non aux suivants, telles les attaques supplémentaires d’un piège complexe.</p>
