--- a/data/feats/skill-02-iCv8KTZ5PcF4GqeV.htm
+++ b/data/feats/skill-02-iCv8KTZ5PcF4GqeV.htm
@@ -1,14 +1,11 @@
 Name: Connections
 Nom: Relations
 PrereqEN: expert in Society|Courtly Graces
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Compter sur vos relations pour obtenir faveurs et rencontres.
+PrereqFR: expert en Société|Manières courtoises
+État: libre
 
 ------ Description (en) ------
 <p>You have social connections you can leverage to trade favors or meet important people. When you're in an area with connections (typically a settlement where you've spent downtime building connections, or possibly another area in the same nation), you can attempt a Society check to arrange a meeting with an important political figure or ask for a favor in exchange for a later favor of your contact's choice. The GM decides the DC based on the difficulty of the favor and the figure's prominence.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis </strong> expert en Société, Manières courtoises</p>
-<hr>
-<p>Vous avez des relations sociales dont vous pouvez tirer parti pour échanger des faveurs ou rencontrer des gens importants. Quand vous vous trouvez dans une zone avec des relations (généralement une communauté dans laquelle vous avez noué des relations lors d’un intermède, ou éventuellement dans une autre zone du même pays), vous pouvez tenter un test de Société pour arranger une entrevue avec une figure politique importante ou demander une faveur en échange d’une faveur future au contact de votre choix. Le MJ décide du DD en fonction de la difficulté de la faveur et de l’importance de la figure.</p>
+<p>Vous avez des relations sociales dont vous pouvez tirer parti pour échanger des faveurs ou rencontrer des gens importants. Quand vous vous trouvez dans une zone avec des relations (généralement une communauté dans laquelle vous avez noué des relations lors d’un intermède ou éventuellement dans une autre zone du même pays), vous pouvez tenter un test de Société pour arranger une entrevue avec une figure politique importante ou demander une faveur en échange d’une faveur future au contact de votre choix. Le MJ décide du DD en fonction de la difficulté de la faveur et de l’importance de la personnalité.</p>
