--- a/data/feats/skill-02-iDimfGmQHacwxeh2.htm
+++ b/data/feats/skill-02-iDimfGmQHacwxeh2.htm
@@ -1,14 +1,11 @@
 Name: Terrifying Resistance
 Nom: Résistance terrifiante
 PrereqEN: expert in Intimidation
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: +1 aux jets de sauvegarde contre les sorts d'une créature que vous avez Démoralisée.
+PrereqFR: expert en Intimidation
+État: libre
 
 ------ Description (en) ------
 <p>The spells of those you have @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Demoralize} are less effective on you. If you succeed in Demoralizing a creature, for the next 24 hours you gain a +1 circumstance bonus to saving throws against that creature's spells.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Intimidation</p>
-<hr>
-<p>Les sorts de ceux que vous avez @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Démoralisés} sont moins efficaces contre vous. Si vous réussissez à Démoraliser une créature, pendant les 24 prochaines heures, vous obtenez un bonus de circonstances de +1 aux jets de sauvegarde contre les sorts de cette créature.</p>
+<p>Les sorts de ceux que vous avez @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Démoralisés} sont moins efficaces contre vous. Si vous réussissez à Démoraliser une créature, durant les 24 heures suivantes, vous obtenez un bonus de circonstances de +1 aux jets de sauvegarde contre les sorts de cette créature.</p>
