--- a/data/feats/skill-02-lB9MVGCJr7aJQuIH.htm
+++ b/data/feats/skill-02-lB9MVGCJr7aJQuIH.htm
@@ -1,18 +1,15 @@
 Name: Armored Stealth
 Nom: Discrétion en armure
 PrereqEN: expert in Stealth
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Réduisez la pénalité de Discrétion liée à votre armure
+PrereqFR: expert en Discrétion
+État: libre
 
 ------ Description (en) ------
 <p>You have learned techniques to adjust and modify your armor and movements to reduce the noise you make.</p>
 <p>When you wear non-noisy armor with which you are trained, your penalty to Stealth checks is reduced by 1 (to a minimum penalty of 0). If you're a master in Stealth, reduce the penalty by 2, and if you're legendary, reduce the penalty by 3.</p>
 <p>If your armor has the noisy trait, instead of reducing the penalty to Stealth checks, you ignore the effects of the noisy trait, enabling you to remove the penalty with a sufficient Strength score as normal.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Discrétion</p>
-<hr>
 <p>Vous avez appris des techniques pour ajuster et modifier votre armure et vos déplacements pour réduire le bruit que vous faites.</p>
 <p>Lorsque vous portez une armure non bruyante avec laquelle vous êtes qualifié, votre pénalité aux tests de Discrétion est réduite de  1 (avec une pénalité minimum de 0). Si vous êtes maître en Discrétion, elle est réduite de 2 et si vous êtes légendaire, elle est réduite de 3.</p>
-<p>Si votre armure possède le trait bruyante, au lieu de réduire la pénalité aux tests de Discrétion, vous ignorez les effets du trait bruyante, vous permettant de retirer la pénalité avec un score de Force suffisant comme habituellement.</p>
+<p>Si votre armure possède le trait bruyante, au lieu de réduire la pénalité aux tests de Discrétion, vous ignorez les effets du trait bruyante, vous permettant de retirer la pénalité avec un score de Force suffisant comme à l'ordinaire.</p>
