fin des avantages des dons de compétenceniv 2

--- a/data/feats/skill-02-xWY5omyIcILNR7y1.htm
+++ b/data/feats/skill-02-xWY5omyIcILNR7y1.htm
@@ -1,14 +1,11 @@
 Name: Magical Crafting
 Nom: Artisanat magique
 PrereqEN: expert in Crafting
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Fabriquer des objets magiques
+PrereqFR: expert en Artisanat
+État: officielle
 
 ------ Description (en) ------
 <p>You can Craft magic items, though some have other requirements, as listed in Chapter 11. When you select this feat, you gain formulas for four common magic items of 2nd level or lower.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis </strong> expert en Artisanat</p>
-<hr>
-<p>Vous pouvez Fabriquer des objets magiques, bien que certains aient d’autres conditions, comme listé au Chapitre 11. Quand vous sélectionnez ce don, vous gagnez les formules pour quatre objets magiques ordinaires de niveau 2 ou inférieur.</p>
+<p>Vous pouvez Fabriquer des objets magiques, bien que certains aient d’autres conditions. Quand vous sélectionnez ce don, vous gagnez les formules pour quatre objets magiques courants de niveau 2 ou inférieur.</p>
