--- a/data/feats/skill-02-XFJiGllNZp8Xebda.htm
+++ b/data/feats/skill-02-XFJiGllNZp8Xebda.htm
@@ -1,14 +1,11 @@
 Name: Intimidating Prowess
 Nom: Prouesse intimidante
 PrereqEN: Strength 16|expert in Intimidation
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Gagner un bonus pour Démoraliser physiquement une cible
+PrereqFR: Force 16|expert en Intimidation
+État: officielle
 
 ------ Description (en) ------
 <p>In situations where you can physically menace the target when you Coerce or Demoralize, you gain a +1 circumstance bonus to your Intimidation check and you ignore the penalty for not sharing a language. If your Strength score is 20 or higher and you are a master in Intimidation, this bonus increases to +2.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis </strong> orce 16, expert en Intimidation</p>
-<hr>
 <p>Dans les situations où vous pouvez physiquement menacer la cible quand vous Contraignez ou Démoralisez, vous gagnez un bonus de circonstances de +1 à votre test d’Intimidation et vous ignorez le malus induit par le fait de ne pas partager une langue. Si votre score de Force est de 20 ou supérieur et que vous êtes maître en Intimidation, ce bonus augmente à +2.</p>
