--- a/data/feats/skill-02-uF0ATN2Zw1Q67ew2.htm
+++ b/data/feats/skill-02-uF0ATN2Zw1Q67ew2.htm
@@ -1,18 +1,15 @@
 Name: Discreet Inquiry
 Nom: Enquête discrète
 PrereqEN: expert in Deception or Diplomacy
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Recueillir des renseignements sans révéler vos motifs
+PrereqFR: expert en Duperie ou en Diplomatie
+État: libre
 
 ------ Description (en) ------
 <p>You are subtle in your efforts to learn the things you need to know.</p>
 <p>When @Compendium[pf2e.actionspf2e.plBGdZhqq5JBl1D8]{Gather Information}, you can hide the true subject of your inquiry among other topics of little interest to you without increasing the difficulty of the check or taking more time to Gather Information.</p>
 <p>Anyone trying to Gather Information to determine if someone else was asking around about the topic in question must exceed your Deception DC or the normal DC to Gather Information about your inquiries, whichever is higher, or else they don't learn of your efforts.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Duperie ou en Diplomatie</p>
-<hr>
 <p>Vos efforts pour apprendre les choses que vous avez besoin de savoir sont subtils.</p>
 <p>Lorsque vous @Compendium[pf2e.actionspf2e.plBGdZhqq5JBl1D8]{Recueillez des informations}, vous pouvez dissimuler le véritable sujet de votre enquête parmi d'autres sujets de moindre intérêt à vos yeux sans augmenter la difficulté du test ou prendre plus de temps pour Recueillir des informations.</p>
-<p>Quiconque essaie de Recueillir des informations sur quelqu'un d'autre pour déterminer si quelqu'un a posé des questions sur le sujet en question doit dépasser votre DD de Duperie ou le DD normal pour Recueillir l'information à propos de votre enquête, le plus haut des deux ou ils n'apprennent rien de vos efforts.</p>
+<p>Quiconque essaie de Recueillir des informations sur quelqu'un d'autre pour déterminer si quelqu'un a posé des questions sur le sujet en question doit dépasser le plus élevé entre votre DD de Duperie ou le DD normal pour Recueillir les informations à propos de votre enquête ou ils n'apprennent rien de vos efforts.</p>
