--- a/data/feats/skill-02-vWtPxwND60EpxBAU.htm
+++ b/data/feats/skill-02-vWtPxwND60EpxBAU.htm
@@ -2,13 +2,10 @@ Name: Tweak Appearances
 Nom: Modifier les apparences
 PrereqEN: expert in Crafting
 Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: expert en Artisanat
+État: libre
 
 ------ Description (en) ------
 <p>You spend 1 minute making quick adjustments to someone's clothing and appearance, causing their words to carry more weight with an audience of your choice. While speaking to that audience, the target gains a +1 item bonus to Diplomacy and Performance checks. If you have master proficiency in Crafting, the bonus increases to +2; if you have legendary proficiency in Crafting, the bonus increases to +3. This bonus lasts until this ability is used on the target again, the situation they were prepared for ends, or they next change their outfit.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Artisanat</p>
-<hr>
-<p>Vous passez 1 minute à faire de rapides ajustements aux vêtements et à l'apparence de quelqu'un, permettant à ses mots de peser davantage face à un public de votre choix. En parlant avec ce public, la cible obtient un bonus d'objet de +1 à ses tests de Représentation et de Diplomatie. Si vous êtes maitreen Artisanat, le bonus passe à +2 ; si vous êtes légendaire en Artisanat, le bonus passe à +3. Ce bonus dure jusqu'àce que la capacité soit utilisé de nouveau sur la cible, que la situation pour laquelles ils ont été préparés s'achèvent ou au prochain changement de tenue.</p>
+<p>Vous passez 1 minute à faire de rapides ajustements aux vêtements et à l'apparence de quelqu'un, permettant à ses mots de peser davantage face à un public de votre choix. En parlant avec ce public, la cible obtient un bonus d'objet de +1 à ses tests de Représentation et de Diplomatie. Si vous êtes maitre en Artisanat, le bonus passe à +2 ; si vous êtes légendaire en Artisanat, le bonus passe à +3. Ce bonus dure jusqu'à ce que la capacité soit utilisée à nouveau sur la cible, que la situation pour laquelle vos préparatifs ont été effectués s'achèvent ou jusqu'à son prochain changement de tenue.</p>
