--- a/data/feats/skill-02-vjQ3VUpYlTAAIx3b.htm
+++ b/data/feats/skill-02-vjQ3VUpYlTAAIx3b.htm
@@ -1,16 +1,13 @@
 Name: Lead Climber
 Nom: Premier de cordée
 PrereqEN: expert in Athletics
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Rendre une ascension plus sûre pour vos alliés qui Suivent l'expert
+PrereqFR: expert en Athlétisme
+État: libre
 
 ------ Description (en) ------
 <p>When climbing, you can prepare routes for others to follow, and you can pull your allies up to avoid disaster.</p>
 <p>When your allies attempt to @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Climb} a route you set using the @Compendium[pf2e.actionspf2e.tfa4Sh7wcxCEqL29]{Follow the Expert} exploration activity, if any of them critically fail their checks to Climb, you can attempt an Athletics check against the same DC. If you succeed, your ally fails instead of critically failing. If you also critically fail, you both experience the consequences of the critical failure.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert en Athlétisme</p>
-<hr>
-<p>Lorsque vous grimpez, vous pouvez préparer laroute pour que les autres vous suivent et vous pouvez tirer vos alliés pour éviter un désastre.</p>
-<p>Lorsque vos alliés tentent d'@Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Escalader} en suivant la route que vous avez tracéeen utilisant l'activité d'exploration @Compendium[pf2e.actionspf2e.tfa4Sh7wcxCEqL29]{Suivre l'expert}, en cas d'échec critique pour Escalader, vous pouvez tenter un test d'Athlétisme contre le même DD. Si vous réussissez, votre allié subit un échec au lieu d'un échec critique. Si vous obtenez aussi un échec critique, vous faites tous les deux l'expérience des conséquences de l'échec critique.</p>
+<p>Lorsque vous grimpez, vous pouvez préparer la route pour que les autres vous suivent et vous pouvez assurer vos alliés pour éviter un désastre.</p>
+<p>Lorsque vos alliés tentent d'@Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Escalader} en suivant la route que vous avez tracée en utilisant l'activité d'exploration @Compendium[pf2e.actionspf2e.tfa4Sh7wcxCEqL29]{Suivre l'expert}, en cas d'échec critique pour Escalader, vous pouvez tenter un test d'Athlétisme contre le même DD. Si vous réussissez, votre allié subit un échec au lieu d'un échec critique. Si vous obtenez aussi un échec critique, vous faites tous les deux l'expérience des conséquences de l'échec critique.</p>
