--- a/data/feats/skill-02-yTLGclKtWVFZLKIz.htm
+++ b/data/feats/skill-02-yTLGclKtWVFZLKIz.htm
@@ -1,14 +1,11 @@
 Name: Godless Healing
 Nom: Guérison athée
 PrereqEN: Battle Medicine|can't have a patron deity
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Avec un accès limité à la magie de guérison divine, les rahadoumi deviennent souvent adeptes d'utiliser la médecine ordinaire lorsque se produisent des situations dangereuses.
+PrereqFR: Médecine militaire|pas de divinité protectrice
+État: libre
 
 ------ Description (en) ------
 <p>You recover an additional 5 Hit Points from a successful attempt to Treat your Wounds or use Battle Medicine on you. After you or an ally use Battle Medicine on you, you become temporarily immune to that Battle Medicine for only 1 hour, instead of 1 day.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Médecine militaire, pas de divinité protectrice</p>
-<hr>
 <p>Vous récupérez 5 Points de Vie de plus lors d’un succès pour @Compendium[pf2e.actionspf2e.1kGNdIIhuglAjIp9]{Soigner vos blessures} ou utiliser @Compendium[pf2e.feats-srd.wYerMk6F1RZb0Fwt]{Médecine militaire} sur vous. Une fois qu’un allié ou vous-même avez utilisé Médecine militaire sur vous, vous êtes immunisé contre ce don pendant 1 heure seulement au lieu d’un jour.</p>
