--- a/data/archetypes/SbvhfCo5gFVt1DgD.htm
+++ b/data/archetypes/SbvhfCo5gFVt1DgD.htm
@@ -43,7 +43,7 @@ Nom: Acrobate
 ------ Description (fr) ------
 <h1>Acrobate</h1>
 <p>Vous avez entraîné votre corps à accomplir d'incroyables et apparemment surhumaines prouesses de souplesse. Vous vous déplacez de manière à laisser vos opposants sans défense et maladroits dans leur réponse, transformant chaque combat en performance artistique.</p>
-<h2 style="text-align: left;"><a class="entity-link" draggable="true" data-pack="pf2e.feats-srd" data-id="aFygWxgSv82WyCsl"><i class="fas fa-suitcase"></i>Dévouement d'Acrobate</a> Don 2</h2>
+<h2><a class="entity-link" draggable="true" data-pack="pf2e.feats-srd" data-id="aFygWxgSv82WyCsl"><i class="fas fa-suitcase"></i>Dévouement d'Acrobate</a> Don 2</h2>
 <p><strong>Prérequis</strong> qualifié en Acrobaties</p>
 <hr>
 <p>Vous devenez un expert en Acrobaties. Au niveau 7, vous devenez maître en Acrobaties et au niveau 15, vous devenez légendaire en Acrobaties. Lorsque vous obtenez une réussite critique sur un test d'Acrobaties pour réaliser un @Compendium[pf2e.actionspf2e.21WIfSu7Xd7uKqV8]{Déplacement acrobatique} dans la case d'un ennemi, vous ne considérez pas la case de l'adversaire comme un terrain difficile.</p>
