--- a/data/pathfinder-bestiary/4zXn6xaaxo1DtIRk.htm
+++ b/data/pathfinder-bestiary/4zXn6xaaxo1DtIRk.htm
@@ -6,4 +6,4 @@ Nom: Vadrouilleur Xulgath
 ------ Description (en) ------
 Xulgath warrens are patrolled-some might say &quot;haunted&quot;-by the community's skulkers. These xulgaths specialize in stealth, striking swiftly from the shadows and otherwise ambushing foes.<br /><br />
 ------ Description (fr) ------
-Les terriers des xulgaths sont patrouillés (pour ne pas dire «hantés») par les vadrouilleurs de la communauté. Ces xulgaths se spécialisent dans la discrétion, afin de tendre des embuscades et frapper leurs adversaires depuis les ombres. <br><br>
+Les terriers des Xulgaths sont patrouillés (pour ne pas dire «hantés») par les vadrouilleurs de la communauté. Ces Xulgaths se spécialisent dans la discrétion, afin de tendre des embuscades et frapper leurs adversaires depuis les ombres. <br><br>
