--- a/data/pathfinder-bestiary-2/iLZpGlyBWxS4Idbi.htm
+++ b/data/pathfinder-bestiary-2/iLZpGlyBWxS4Idbi.htm
@@ -1,8 +1,8 @@
 Name: Emperor Cobra
-Nom: 
-État: auto-trad
+Nom: Cobra empereur
+État: libre
 
 ------ Description (en) ------
 These aggressive serpents infest bogs and lowlands. Despite a length of over 16 feet and weighing over 200 pounds, they can climb trees in seconds. An emperor cobra wards off predators by flaring its hood and hissing at its attacker.<br /><br />
 ------ Description (fr) ------
-Ces serpents agressifs infestent les tourbières et les plaines. Malgré une longueur de plus de 16 pieds et un poids de plus de 200 livres, ils peuvent grimper aux arbres en quelques secondes. Le cobra empereur repousse ses prédateurs en déployant son capuchon et en sifflant son agresseur ;
+Ces serpents agressifs infestent les tourbières et les plaines. Malgré une longueur de près de 5 m et un poids de plus de 100 kilos, ils peuvent grimper aux arbres en quelques secondes. Le cobra empereur repousse ses prédateurs en déployant sa collerette et en sifflant son agresseur.<br /><br />
