--- a/data/actions/rmwa3OyhTZ2i2AHl.htm
+++ b/data/actions/rmwa3OyhTZ2i2AHl.htm
@@ -1,7 +1,6 @@
 Name: Craft
 Nom: Fabriquer
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You can make an item from raw materials. You need the @Compendium[pf2e.feats-srd.is3Oz9wt11lNq62K]{Alchemical Crafting} skill feat to create alchemical items, the @Compendium[pf2e.feats-srd.xWY5omyIcILNR7y1]{Magical Crafting} feat to create magic items, and the @Compendium[pf2e.feats-srd.DMetdzt1VJL2Y62i]{Snare Crafting} feat to create snares.</p>
