--- a/data/pathfinder-bestiary/jMiiQDIDxW9ZMvCV.htm
+++ b/data/pathfinder-bestiary/jMiiQDIDxW9ZMvCV.htm
@@ -6,4 +6,4 @@ Nom: Magicien dhampir
 ------ Description (en) ------
 This dhampir is a svetocher, the child of a moroi vampire.<br /><br />
 ------ Description (fr) ------
-Ce dhampir est un svetocher, l’enfant d’un vampire moroï.<br><br>
+Ce dhampir est un Svetocher, l’enfant d’un vampire moroï.<br><br>
