--- a/data/pathfinder-bestiary/Q8FAcsuta4p6d8KS.htm
+++ b/data/pathfinder-bestiary/Q8FAcsuta4p6d8KS.htm
@@ -6,5 +6,4 @@ Nom: Wyrm de feu
 ------ Description (en) ------
 Firewyrms live in tubes of molten lava found throughout the Plane of Fire.<br /><br />
 ------ Description (fr) ------
-Les wyrms de feu vivent dans des canaux de magma que l’on trouve à travers tout le
-plan élémentaire du feu.
+Les wyrms de feu vivent dans des canaux de magma que l’on trouve à travers tout le plan élémentaire du feu.
