--- a/data/pathfinder-bestiary/iF5NeHC6ReqXLFmY.htm
+++ b/data/pathfinder-bestiary/iF5NeHC6ReqXLFmY.htm
@@ -1,5 +1,5 @@
 Name: Soulbound Doll (Neutral Good)
-Nom: Poupées d'âmes
+Nom: Poupées d'âmes (Neutre bon)
 État: changé
 
 ------ Description (en) ------
