--- a/data/pathfinder-bestiary/rJgUpdXBCMBrsJFf.htm
+++ b/data/pathfinder-bestiary/rJgUpdXBCMBrsJFf.htm
@@ -1,5 +1,5 @@
 Name: Soulbound Doll (Lawful Neutral)
-Nom: Poupée d'âme
+Nom: Poupée d'âme (Loyal neutre)
 État: changé
 
 ------ Description (en) ------
