--- a/data/pathfinder-bestiary-2/lvvLNyZpbb4Ydz3U.htm
+++ b/data/pathfinder-bestiary-2/lvvLNyZpbb4Ydz3U.htm
@@ -1,6 +1,6 @@
 Name: Petitioner (Axis)
-Nom: 
-État: auto-trad
+Nom:  Pétitionnaire (Axis)
+État: libre
 
 ------ Description (en) ------
 <p>When a mortal dies, their soul travels to the Boneyard in the Outer Planes where they are judged by Pharasma, the goddess of the dead. Once they have been judged, their soul is sent on to their final reward or punishment in the afterlife, and in the process is transformed into a creature known as a petitioner. This process grants the soul a new body, one whose shape is the result of the prevailing philosophical forces of the plane to which it is sent. The petitioner's memories from their life are typically wiped nearly clean, allowing them to retain only a few hazy fragments akin to half-remembered dreams. Regardless of the petitioner's size, power, or nature in life, they're a Medium creature in their afterlife.</p>
