mise à jour des actions

--- a/data/actions/EA5vuSgJfiHH7plD.htm
+++ b/data/actions/EA5vuSgJfiHH7plD.htm
@@ -19,7 +19,7 @@ Nom: Pister
 <li><strong>Legendary</strong> old tracks through a windy desert's sands, tracks obscured by a major blizzard or hurricane</li>
 </ul>
 ------ Description (fr) ------
-<p>Vous suivez des traces en vous déplaçant à la moitié de votre Vitesse de voyage. Suite à un test réussi de Pister, vous pouvez continuer à suivre des traces à la moitié de votre Vitesse sans effectuer de tests supplémentaires pendant un maximum d’une heure. Vous pouvez, dans certains cas, Pister au cours d’une rencontre. Le cas échéant, Pister est une action unique sans le trait exploration mais vous devez faire des tests plus souvent car vous vous trouvez dans une situation tendue. Le MJ détermine la fréquence de ces tests.</p>
+<p>Vous suivez des traces en vous déplaçant à la moitié de votre Vitesse de voyage. Suite à un test réussi de Pister, vous pouvez continuer à suivre des traces à la moitié de votre Vitesse sans effectuer de tests supplémentaires pendant un maximum d’une heure. Vous pouvez, dans certains cas, Pister au cours d’une rencontre. Dans ce cas, Pister est une action unique sans le trait exploration mais vous devez faire des tests plus souvent car vous vous trouvez dans une situation tendue. Le MJ détermine la fréquence de ces tests.</p>
 <p>Vous faites un test de Survie quand vous commencez à Pister, une fois par heure quand vous suivez des traces et à chaque fois qu’une chose change les traces de manière significative. Le MJ détermine le DD de ces tests en fonction de la fraîcheur des traces, du climat et du type de sol.</p>
 <hr />
 <p><strong>Succès</strong> Vous trouvez les traces ou continuez à suivre celles que vous avez déjà trouvées.</p>
