--- a/data/actions/QNAVeNKtHA0EUw4X.htm
+++ b/data/actions/QNAVeNKtHA0EUw4X.htm
@@ -1,7 +1,6 @@
 Name: Feint
 Nom: Feinter
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are within melee reach of the target you attempt to Feint.</p>
