--- a/data/actions/2u915NdUyQan6uKF.htm
+++ b/data/actions/2u915NdUyQan6uKF.htm
@@ -1,7 +1,6 @@
 Name: Demoralize
 Nom: Démoraliser
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>With a sudden shout, a well-timed taunt, or a cutting put-down, you can shake an enemy's resolve. Choose a creature within 30 feet of you who you're aware of. Attempt an <span data-pf2-action="demoralize" data-pf2-glyph="A">Intimidation</span> check against that target's Will DC. If the target does not understand the language you are speaking, or you're not speaking a language, you take a -4 circumstance penalty to the check. Regardless of your result, the target is temporarily immune to your attempts to Demoralize it for 10 minutes.</p>
