--- a/data/actions/PMbdMWc2QroouFGD.htm
+++ b/data/actions/PMbdMWc2QroouFGD.htm
@@ -1,7 +1,6 @@
 Name: Grapple
 Nom: Saisir
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You have at least one free hand or have your target grappled or restrained. Your target isn't more than one size larger than you.</p>
@@ -15,9 +14,9 @@ Nom: Saisir
 ------ Description (fr) ------
 <p><strong>Conditions</strong> L’une de vos mains au moins est libre. Votre cible ne peut pas être de plus d’une catégorie de taille supérieure à vous.</p>
 <hr />
-<p>Vous tentez de saisir un adversaire avec votre main libre. Effectuez un test d’<span data-pf2-action="grapple" data-pf2-glyph="A">Athlétisme</span> contre son DD de Vigueur. Vous pouvez également Saisir pour maintenir votre prise sur une créature que vous avez déjà empoignée.</p>
+<p>Vous tentez de saisir un adversaire avec votre main libre. Effectuez un test d’<span data-pf2-action="grapple" data-pf2-glyph="A">Athlétisme</span> contre son DD de Vigueur. Vous pouvez également Saisir pour maintenir votre prise sur une créature que vous avez déjà empoignée ou entravée sans avoir de main libre.</p>
 <hr />
 <p><strong>Succès critique</strong> Votre adversaire est @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Entravé} jusqu’à la fin de votre prochain tour, sauf si vous vous déplacez ou si votre adversaire @Compendium[pf2e.actionspf2e.SkZAQRkLLkmBQNB9]{S’échappe}.</p>
 <p><strong>Succès</strong> Votre adversaire est @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{empoigné} jusqu’à la fin de votre prochain tour, sauf si vous vous déplacez ou si votre adversaire S’échappe.</p>
 <p><strong>Échec</strong> Vous ne parvenez pas à saisir votre adversaire. Si vous avez déjà empoigné ou entravé votre adversaire en utilisant l’action Saisir, ces états sur cet adversaire disparaissent.</p>
-<p><strong>Échec critique</strong> Si vous avez déjà empoigné ou entravé votre adversaire, il se libère. Votre cible peut vous saisir, comme si elle avait réussi à effectuer l’action Saisir contre vous, ou vous obliger à tomber @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre}.</p>
+<p><strong>Échec critique</strong> Si vous avez déjà empoigné ou entravé votre adversaire, il se libère. Votre cible peut vous saisir, comme si elle avait réussi à effectuer l’action Saisir contre vous ou vous obliger à tomber @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre}.</p>
