--- a/data/actions/ge56Lu1xXVFYUnLP.htm
+++ b/data/actions/ge56Lu1xXVFYUnLP.htm
@@ -1,7 +1,6 @@
 Name: Trip
 Nom: Croc-en-jambe
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You have at least one hand free. Your target can't be more than one size larger than you</p>
