--- a/data/pathfinder-bestiary-2/dvZM7hGNDu8olV7A.htm
+++ b/data/pathfinder-bestiary-2/dvZM7hGNDu8olV7A.htm
@@ -1,5 +1,5 @@
 Name: Brood Leech Swarm
-Nom: nuée de sangsues couveuses
+Nom: Nuée de sangsues couveuses
 État: libre
 
 ------ Description (en) ------
