--- a/data/pathfinder-bestiary-2/j43O2vBu8eu2wC5z.htm
+++ b/data/pathfinder-bestiary-2/j43O2vBu8eu2wC5z.htm
@@ -5,4 +5,4 @@ Nom: Maître Vrykolakas
 ------ Description (en) ------
 Vrykolakas masters are sinister shapechangers. They walk undetected among the living and prey upon them like a wolf among sheep, often leaving the corpses to rise as vrykolakas spawn.<br /><br />
 ------ Description (fr) ------
-Les maîtres Vrykolakas sont de sinistres matamorphe. Ils passent inaperçus parmi les vivants et s'en prennent à eux comme un loup parmi les moutons, laissant souvent les cadavres ressusciter sous la forme de rejetons de vrykolakas.<br /><br />
+Les maîtres Vrykolakas sont de sinistres métamorphes. Ils passent inaperçus parmi les vivants et s'en prennent à eux comme un loup parmi les moutons, laissant souvent les cadavres ressusciter sous la forme de rejetons de Vrykolakas.<br /><br />
