--- a/data/pathfinder-bestiary-2/3DSqfobadad3pA6O.htm
+++ b/data/pathfinder-bestiary-2/3DSqfobadad3pA6O.htm
@@ -5,4 +5,4 @@ Nom: Mouche géante
 ------ Description (en) ------
 This pony-sized fly's twitching limbs seem to never stop moving as it constantly cleans itself and scoops anything edible into its mouthparts. While primarily carrion eaters, giant flies sometimes prey on livestock or other animals too slow to get away.<br /><br />
 ------ Description (fr) ------
-Les membres de cette mouche de la taille d'un poney semblent ne jamais s'arrêter de bouger, car elle se nettoie constamment et ramasse tout ce qui est comestible pour le mettre dans sa bouche. Bien qu'elles soient principalement des mangeuses de charognes, les mouches géantes s'attaquent parfois au bétail ou à d'autres animaux trop lents pour leur échapper.<br /><br />
+Les membres de cette mouche de la taille d'un poney semblent ne jamais s'arrêter de bouger, car elle se nettoie constamment et ramasse tout ce qui est comestible pour le mettre dans sa bouche. Bien qu'elles soient principalement des mangeuses de charognes, les Mouches Géantes s'attaquent parfois au bétail ou à d'autres animaux trop lents pour leur échapper.<br /><br />
