--- a/data/pathfinder-bestiary-2/g41X4b3q2iDMLRt3.htm
+++ b/data/pathfinder-bestiary-2/g41X4b3q2iDMLRt3.htm
@@ -5,4 +5,4 @@ Nom: Dévoreur draconique
 ------ Description (en) ------
 The ravener presented here was once an ancient red dragon.<br /><br />
 ------ Description (fr) ------
-Le dévoreur draconique présenté ici était autrefois un ancien dragon rouge.<br /><br />
+Le Dévoreur draconique présenté ici était autrefois un ancien Dragon Rouge.<br /><br />
