--- a/data/pathfinder-bestiary-2/jgMFqFDNUWsrnnBH.htm
+++ b/data/pathfinder-bestiary-2/jgMFqFDNUWsrnnBH.htm
@@ -1,6 +1,6 @@
 Name: Tick Swarm
 Nom: Nuée de Tiques
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 This swarm of thousands of fist-sized ticks forms a moving carpet of bloated insects-a nauseating and intimidating sight.<br /><br />
