--- a/data/pathfinder-bestiary-2/mZxVXRI1Zh3HUXxn.htm
+++ b/data/pathfinder-bestiary-2/mZxVXRI1Zh3HUXxn.htm
@@ -1,8 +1,7 @@
 Name: Living Thunderclap
-Nom: 
-État: auto-trad
-
+Nom: Coup de tonnerre Vivant
+État: libre
 ------ Description (en) ------
 A living thunderclap is a humanoid-shaped storm cloud that cracks and booms with thunder.<br /><br />
 ------ Description (fr) ------
-Un coup de tonnerre vivant est un nuage d'orage de forme humanoïde qui craque et gronde avec le tonnerre.<br /><br />
+Un Coup de tonnerre Vivant est un nuage d'orage de forme humanoïde qui craque et gronde avec le tonnerre.<br /><br />
