--- a/data/classfeatures/cleric-11-o8nHreMyiLi64rZz.htm
+++ b/data/classfeatures/cleric-11-o8nHreMyiLi64rZz.htm
@@ -1,6 +1,6 @@
 Name: Fourth Doctrine
-Nom: Doctrine : quatrième doctrine
-État: auto-trad
+Nom: Doctrine : quatrième dogme
+État: libre
 
 ------ Description (en) ------
 <p>You gain the fourth benefit of your doctrine:</p>
