relecture dons d'ancètre

--- a/data/feats/ancestry-01-4mLlHpD41101H0Iy.htm
+++ b/data/feats/ancestry-01-4mLlHpD41101H0Iy.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: All too aware of your true nature, you’ve studied hags and their powers.
-Avantage: Trop conscient de votre vraie nature, vous avez étudié les sorcières et leurs pouvoirs.
+Avantage: Complètement au fait de votre vraie nature, vous avez étudié les guenaudes et leurs pouvoirs.
 
 ------ Description (en) ------
 <p>All too aware of your true nature, you've studied hags and their powers.</p>
