--- a/data/feats/ancestry-01-8nF3r3NHW2uSRgwb.htm
+++ b/data/feats/ancestry-01-8nF3r3NHW2uSRgwb.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You know more about the habits of devils than is entirely safe.
-Avantage: Vous en savez plus sur les habitudes des démons que ce qui est sûr.
+Avantage: Vous en savez beaucoup sur les habitudes des diables.
 
 ------ Description (en) ------
 <p><strong>Access</strong> Chelaxian nationality<br /></p>
