--- a/data/feats/ancestry-01-5EpkOj9CFOjt8vsK.htm
+++ b/data/feats/ancestry-01-5EpkOj9CFOjt8vsK.htm
@@ -6,7 +6,7 @@ PrereqFR: Vision nocturne
 
 ------ Benefits and spoiler ----
 Benefits: You can see in the darkness as easily as a true vampire.
-Avantage: Tu peux voir dans l'obscurité aussi facilement qu'un vrai vampire.
+Avantage: Vous pouvez voir dans l'obscurité aussi facilement qu'un vrai vampire.
 
 ------ Description (en) ------
 <p>You can see in the darkness as easily as a true vampire. You gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision}.</p>
