--- a/data/feats/ancestry-01-6dymMIqs3dAFqnyR.htm
+++ b/data/feats/ancestry-01-6dymMIqs3dAFqnyR.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your blood soars with the power of the magnificent garuda, proud and stoic avian warriors.
-Avantage: Votre sang s'élève avec la puissance des magnifiques garudas, fiers et stoïques guerriers aviaires.
+Avantage: Votre sang sourd de la puissance des magnifiques garudas, fiers et stoïques guerriers aviaires.
 
 ------ Description (en) ------
 <p>Your blood soars with the power of the magnificent garuda, proud and stoic avian warriors. You only take half the normal damage from falling and gain a +2 circumstance bonus to saving throws against effects with the air trait.</p>
 ------ Description (fr) ------
-<p>Votre sang sourd de la puissance des magnifiques garudas, les guerriers aviaires fiers et stoïques. Vous subissez seulement la moitié des dégâts normaux de chute et obtenez un bonus de circonstances de +2 aux jets de sauvegarde contre les effets avec le trait air.</p>
+<p>Votre sang sourd de la puissance des magnifiques garudas, les guerriers aviaires fiers et stoïques.</p>
+<p>Vous subissez seulement la moitié des dégâts normaux de chute et obtenez un bonus de circonstances de +2 aux jets de sauvegarde contre les effets avec le trait air.</p>
