--- a/data/feats/ancestry-01-8rKlptZ7ArtJ6cI8.htm
+++ b/data/feats/ancestry-01-8rKlptZ7ArtJ6cI8.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You seek to emulate vanth reapers' fighting styles.
-Avantage: Vous cherchez à imiter les styles de combat des faucheurs vanth'.
+Avantage: Vous cherchez à imiter les styles de combat des vanths.
 
 ------ Description (en) ------
 <p>You seek to emulate vanth reapers' fighting styles. You are trained with bo staves, longbows, composite longbows, scythes, and staves.</p>
