--- a/data/feats/ancestry-01-A1RzkLCj7mXJI1IY.htm
+++ b/data/feats/ancestry-01-A1RzkLCj7mXJI1IY.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your family instilled the values of care and patience into you from a young age.
-Avantage: Votre famille vous a inculqué les valeurs de soin et de patience dès votre plus jeune âge.
+Avantage: Vous obtenez une bonus de +1 aux tests des activités d'Intermède
 
 ------ Description (en) ------
 <p><strong>Access</strong> Uhlam ethnicity<br /></p>
@@ -15,4 +15,4 @@ Avantage: Votre famille vous a inculqué les valeurs de soin et de patience dès
 ------ Description (fr) ------
 <p><strong>Accès</strong> ethnie Uhlam</p>
 <hr>
-<p>Votre famille a instillé en vous des valeurs d'implication' et de patience depuis votre plus jeune âge. Vous obtenez un bonus de circonstances de +1 aux tests pour accomplir une activité d'intermède.</p>
+<p>Votre famille a instillé en vous des valeurs d'implication et de patience depuis votre plus jeune âge. Vous obtenez un bonus de circonstances de +1 aux tests pour accomplir une activité d'intermède.</p>
