--- a/data/feats/ancestry-01-13zaW8ZHRWnRe2pj.htm
+++ b/data/feats/ancestry-01-13zaW8ZHRWnRe2pj.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You’ve studied traditional hobgoblin exercises and fieldcraft, all of which have a militaristic bent.
-Avantage: Vous avez étudié les exercices traditionnels des hobgobelins et l'art du terrain, qui ont tous un côté militaire.
+Avantage: Vous avez étudié les exercices et les techniques traditionnels des hobgobelins qui ont tous un aspect militaire.
 
 ------ Description (en) ------
 <p>You've studied traditional hobgoblin exercises and fieldcraft, all of which have a militaristic bent. You become trained in Athletics and Crafting. For each of these skills in which you were already trained, you become trained in a skill of your choice. You also become trained in Hobgoblin Lore.</p>
 ------ Description (fr) ------
-<p>>Vous avez étudié les exercices et techniques traditionnels hobgobelins qui ont tous une tournure militaire.</p>
-<p>Vous êtes qualifié en Athlétisme et Artisanat. Pour chacune de ces compétences dans laquelle vous étiez déjà qualifié, vous devenez qualifié dans une compétence de votre choix. Vous êtes également qualifié en Connaissance.</p>
+<p>>Vous avez étudié les exercices et techniques traditionnels hobgobelins qui ont tous un aspect militaire.</p>
+<p>Vous êtes qualifié en Athlétisme et Artisanat. Pour chacune de ces compétences dans laquelle vous étiez déjà qualifié, vous devenez qualifié dans une compétence de votre choix. Vous êtes également qualifié en Connaissance hobgobeline.</p>
