--- a/data/feats/ancestry-01-30e9SdbmI3t5OJQE.htm
+++ b/data/feats/ancestry-01-30e9SdbmI3t5OJQE.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Once, you died because someone—murderer or monster, soldier or executioner— chose to strike you down.
-Avantage: Une fois, vous êtes mort parce que quelqu'un - meurtrier ou monstre, soldat ou bourreau - a choisi de vous abattre.
+Avantage: Vous frappez un dernier coup celui qui vous tue.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day<br /><strong>Trigger</strong> You are about to gain the dying condition as a result of another creature’s attack or ability, and that creature is within your melee reach.</p>
@@ -16,8 +16,8 @@ Avantage: Une fois, vous êtes mort parce que quelqu'un - meurtrier ou monstre, 
 <p><strong>Special</strong> You can select this feat only at 1st level, and you can’t retrain into or out of this feat.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
-<p><strong>Déclencheur</strong> Vous allez obtenir la condition Mourante en tant que résultat d'une attaque ou d'une capacité d'une autre créature’ et cette créature est dans votre allonge au corps-à-corps.</p>
+<p><strong>Déclencheur</strong> Vous allez obtenir la condition Mourante en tant que résultat d'une attaque ou d'une capacité d'une autre créature et cette créature est à portée de votre allonge au corps-à-corps.</p>
 <hr />
-<p>Une fois, vous êtes mort à cause  de quelqu'un — un meurtrier, un soldat ou un tueur — choisi pour vous abattre. Juste avant de perdre conscience faites une Frappe au corps-à-corps contre la créature déclencheuse.</p>
+<p>Une fois, vous êtes mort à cause  de quelqu'un — un meurtrier, un soldat ou un tueur — qui a choisi de vous abattre. Juste avant de perdre conscience faites une Frappe au corps-à-corps contre la créature déclencheuse.</p>
 <hr />
 <p><strong>Spécial</strong> Vous pouvez choisir ce don au niveau 1 et vous ne pouvez utiliser le réapprentissage pour perdre ou gagner ce don.</p>
