--- a/data/feats/ancestry-01-48X3xSWxI20RPOr9.htm
+++ b/data/feats/ancestry-01-48X3xSWxI20RPOr9.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You recognize the chittering of ground creatures as its own peculiar language.
-Avantage: Vous reconnaissez le grognement des créatures terrestres comme un langage particulier.
+Avantage: Vous savez parler le babil des créatures souterraines.
 
 ------ Description (en) ------
 <p>You recognize the chittering of ground creatures as its own peculiar language. You can ask questions of, receive answers from, and use the Diplomacy skill with animals that have a burrow Speed, such as badgers, ground squirrels, moles, and prairie dogs. The GM determines which animals count for this ability.</p>
