--- a/data/feats/ancestry-01-50CRpoP5XS1MVbu8.htm
+++ b/data/feats/ancestry-01-50CRpoP5XS1MVbu8.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have learned how to use your sling to fell enormous creatures.
-Avantage: Vous avez appris à utiliser votre fronde pour abattre d'énormes créatures.
+Avantage: Vous avez appris à utiliser votre fronde plus efficacement contre les grandes créatures.
 
 ------ Description (en) ------
 <p>You have learned how to use your sling to fell enormous creatures. When you hit on an attack with a sling against a Large or larger creature, increase the size of the weapon damage die by one step.</p>
