--- a/data/pathfinder-bestiary/1CzZINpYRcNBKDnO.htm
+++ b/data/pathfinder-bestiary/1CzZINpYRcNBKDnO.htm
@@ -1,6 +1,6 @@
 Name: Lizardfolk Scout
 Nom: Éclaireur homme-lézard
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
