--- a/data/pathfinder-bestiary/3OPUMuBQThM5EXjz.htm
+++ b/data/pathfinder-bestiary/3OPUMuBQThM5EXjz.htm
@@ -1,6 +1,6 @@
 Name: Young White Dragon
-Nom: Jeune dragon blanc
-État: changé
+Nom: Dragon blanc jeune
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
