--- a/data/pathfinder-bestiary/3W2PMV6IbVdouOB1.htm
+++ b/data/pathfinder-bestiary/3W2PMV6IbVdouOB1.htm
@@ -1,6 +1,6 @@
 Name: Young Copper Dragon
-Nom: Jeune dragon de cuivre
-État: changé
+Nom: Dragon de cuivre jeune
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
