--- a/data/pathfinder-bestiary-2/pxlZ8QbxMK6b3l5w.htm
+++ b/data/pathfinder-bestiary-2/pxlZ8QbxMK6b3l5w.htm
@@ -1,8 +1,8 @@
 Name: Leng Spider
-Nom: 
-État: auto-trad
+Nom: Araignée de Leng
+État: libre
 
 ------ Description (en) ------
 The monstrous, bloated spiders from the windswept realm of Leng build eerie, dangerous lairs with the aid of magically compelled slaves. Leng spiders have anywhere from five to 13 legs, but never an even number.<br /><br />
 ------ Description (fr) ------
-Les araignées monstrueuses et gonflées du royaume de Leng, balayé par les vents, construisent des repaires sinistres et dangereux à l'aide d'esclaves contraints par la magie. Les araignées de Leng ont entre cinq et treize pattes, mais jamais un nombre pair.<br /><br />
+Les araignées monstrueuses et boursouflées du Royaume de Leng, balayé par les vents, construisent des repaires sinistres et dangereux à l'aide d'esclaves contraints par la magie. Les Araignées de Leng ont entre cinq et treize pattes, mais jamais un nombre pair.<br /><br />
