--- a/data/pathfinder-bestiary-2/QHNXT5bZDqKRzwEF.htm
+++ b/data/pathfinder-bestiary-2/QHNXT5bZDqKRzwEF.htm
@@ -1,6 +1,6 @@
 Name: Spear Frog
-Nom: 
-État: auto-trad
+Nom: Grenouille Lance
+État: libre
 
 ------ Description (en) ------
 The spear frog is named for its toxin, which is traditionally used to envenom thrown projectiles like spears and daggers.<br /><br />
