--- a/data/pathfinder-bestiary/5H8ZX7y5IkUBhvhF.htm
+++ b/data/pathfinder-bestiary/5H8ZX7y5IkUBhvhF.htm
@@ -1,6 +1,6 @@
 Name: Skeleton Guard
 Nom: Garde squelette
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
