--- a/data/pathfinder-bestiary/5MVBU86ZRw2ANMQn.htm
+++ b/data/pathfinder-bestiary/5MVBU86ZRw2ANMQn.htm
@@ -1,6 +1,6 @@
 Name: Skeletal Giant
 Nom: Géant squelettique
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
