--- a/data/pathfinder-bestiary/9FZMzpAu4XhCI0IB.htm
+++ b/data/pathfinder-bestiary/9FZMzpAu4XhCI0IB.htm
@@ -1,6 +1,6 @@
 Name: Deep Gnome Scout
-Nom: Éclaireur gnome des profondeurs
-État: changé
+Nom: Éclaireur Gnome des profondeurs
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
