--- a/data/pathfinder-bestiary/9sa2KE4Fbh3OPH7M.htm
+++ b/data/pathfinder-bestiary/9sa2KE4Fbh3OPH7M.htm
@@ -6,4 +6,4 @@ Nom: Requin de saumure
 ------ Description (en) ------
 Brine sharks are deadly elementals that roam the endless oceans of the Plane of Water.<br /><br />
 ------ Description (fr) ------
-Les requins de saumure sont des élémentaires mortels qui rôdent dans les océans sans fin du plan de l’eau.
+Les Requins de saumure sont des élémentaires mortels qui rôdent dans les océans sans fin du plan de l’eau.
