--- a/data/pathfinder-bestiary/9sa2KE4Fbh3OPH7M.htm
+++ b/data/pathfinder-bestiary/9sa2KE4Fbh3OPH7M.htm
@@ -1,6 +1,6 @@
 Name: Brine Shark
 Nom: Requin de saumure
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
