--- a/data/feats/ancestry-01-ClVSyZxWk5L5KVLd.htm
+++ b/data/feats/ancestry-01-ClVSyZxWk5L5KVLd.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your mind resonates with the inscrutable thought processes that inhuman aberrations use to communicate.
-Avantage: Votre esprit résonne avec les processus de pensée impénétrables que les aberrations inhumaines utilisent pour communiquer.
+Avantage: Vous pouvez lancer lien mental une fois par jour
 
 ------ Description (en) ------
 <p>Your mind resonates with the inscrutable thought processes that inhuman aberrations use to communicate. You can cast @Compendium[pf2e.spells-srd.D442XMADp01qJ7Cs]{Mindlink} as an innate occult spell once per day, but you can target only aberrations.</p>
