--- a/data/feats/ancestry-01-bWyY9NtLU5wXr03y.htm
+++ b/data/feats/ancestry-01-bWyY9NtLU5wXr03y.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Wind and lightning have always been close friends to you.
-Avantage: Le vent et la foudre ont toujours été des amis proches pour vous.
+Avantage: Vous obtenez le tour de magie arc électrique.
 
 ------ Description (en) ------
 <p>Wind and lightning have always been close friends to you. You can cast the @Compendium[pf2e.spells-srd.kBhaPuzLUSwS6vVf]{Electric Arc} cantrip as a primal innate spell at will. A cantrip is heightened to a spell level equal to half your level rounded up.</p>
