--- a/data/feats/ancestry-01-AKrxQ2JuDObM8coY.htm
+++ b/data/feats/ancestry-01-AKrxQ2JuDObM8coY.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You gain one of the following senses available to your inherent animal: darkvision , low-light vision , or scent (imprecise) 30 feet.
-Avantage: Vous gagnez l'un des sens suivants disponibles pour votre animal intérieur : vision dans le noir, vision nocturne ou odorat (imprécis) à 9 m.
+Avantage: Vous gagnez l'un des sens de votre animal intérieur.
 
 ------ Description (en) ------
 <p>You gain one of the following senses available to your inherent animal: @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision}, @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Low-Light Vision}, or scent (imprecise) 30 feet. You must have low-light vision before you can gain darkvision with this feat. If your inherent animal doesn’t typically have a specific type of sense, you can’t gain that sense with this feat.</p>
