--- a/data/feats/ancestry-01-ch3BWG3Z4kDEmuZW.htm
+++ b/data/feats/ancestry-01-ch3BWG3Z4kDEmuZW.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Although you may not even be aware, the alghollthus your ancestors once served maintain a stranglehold on the deepest, tethered parts of your mind.
-Avantage: Bien que vous n'en soyez peut-être pas conscient, les alghollthus que vos ancêtres ont servis autrefois maintiennent une emprise sur les parties les plus profondes et les plus attachées de votre esprit.
+Avantage: Vous résistez mieux aux effets mentaux, à l'exception de ceux des alghollthus.
 
 ------ Description (en) ------
 <p>Although you may not even be aware, the alghollthus your ancestors once served maintain a stranglehold on the deepest, tethered parts of your mind. You receive a +2 circumstance bonus to Will saves against mental effects that would make you controlled, and if you roll a success against such an effect, you get a critical success instead. However, you gain none of these benefits against effects originating from alghollthus and instead take a –2 circumstance penalty against mental effects from alghollthus.</p>
 ------ Description (fr) ------
-<p>Bien que vous puissiez même ne pas en être conscient, les Alghollthus que vos ancêtres ont autrefois servi, détiennent une forteresse dans les profondeurs et cette servitude est liée à votre esprit. Vous recevez un bonus de circonstances de +2 aux jets de Volonté contre les effets mentaux qui devraient vous contrôler et, si vous obtenez un succès contre un tel effet, vous obtenez un succès critique à la place. Quoi qu'il en soit, vous n'obtenez aucun de ces avantages contre les effets provenant des Alghollthus et vous subissez à la place une pénalité de circonstances de –2 contre les effets mentaux des Alghollthus.</p>
+<p>Bien que vous puissiez même ne pas en être conscient, les alghollthus que vos ancêtres ont autrefois servi, maintiennent une emprise dans les couches les plus profondes de votre esprit. Vous recevez un bonus de circonstances de +2 aux jets de Volonté contre les effets mentaux qui devraient vous contrôler et, si vous obtenez un succès contre un tel effet, vous obtenez un succès critique à la place. Quoi qu'il en soit, vous n'obtenez aucun de ces avantages contre les effets provenant des alghollthus et vous subissez à la place une pénalité de circonstances de –2 contre les effets mentaux des alghollthus.</p>
