--- a/data/feats/ancestry-01-csoGdGuWasEw3boD.htm
+++ b/data/feats/ancestry-01-csoGdGuWasEw3boD.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The ancient Saoc Brethren were the masters of astrology, and while your knowledge may be but a pale shadow of their wisdom, it still comes in handy.
-Avantage: Les anciens Frères Saoc étaient les maîtres de l'astrologie, et même si vos connaissances ne sont que l'ombre de leur sagesse, elles sont toujours utiles.
+Avantage: Votre pratique de l'astrologie peut vous fournir une aide.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> 3 times per day<br /><strong>Access</strong> Lirgeni nationality<br /><strong>Requirements</strong> You must spend 10 minutes just after your daily preparations examining the sky or consulting a star chart or you can't use this action that day.<br /></p>
@@ -17,4 +17,4 @@ Avantage: Les anciens Frères Saoc étaient les maîtres de l'astrologie, et mê
 <p><strong>Accès</strong> originaire du Lirgen</p>
 <p><strong>Conditions</strong> Vous devez passer 10 minutes juste après vos préparatifs quotidiens à examiner le ciel ou consulter une carte des étoiles ou vous ne pouvez pas utiliser cette action durant cette journée.</p>
 <hr />
-<p>Les membres de l'ancienne Fraternité du Saoc étaient des maîtres de l'astrologie, et bien que vos connaissances ne sont plus qu'un pâle reflet de leur sagesse, elles peuvent toujours vous servir. Vous sondez les étoiles en quête de prédictions à propos de votre situation actuelle. Si votre action suivante nécessite que vous tentiez des tests de compétence, lancez 1d8. Sur un résultat de 6, 7 ou 8, vous obtenez un bonus de circonstances de +2 au premier test de compétence qui suit. Sur un 3, 4 ou 5, vous obtenez un bonus de circonstances de +1. Sur un 2, vous n'obtenez rien. Sur un 1, vous subissez une pénalité de circonstance de –1 au test de compétence.</p>
+<p>Les membres de l'ancienne Fraternité du Saoc étaient des maîtres de l'astrologie, et bien que vos connaissances ne soient plus qu'un pâle reflet de leur sagesse, elles peuvent toujours vous être utiles. Vous sondez les étoiles en quête de prédictions à propos de votre situation actuelle. Si votre action suivante nécessite que vous tentiez des tests de compétence, lancez 1d8. Sur un résultat de 6, 7 ou 8, vous obtenez un bonus de circonstances de +2 au premier test de compétence qui suit. Sur un 3, 4 ou 5, vous obtenez un bonus de circonstances de +1. Sur un 2, vous n'obtenez rien. Sur un 1, vous subissez une pénalité de circonstance de –1 au test de compétence.</p>
