--- a/data/feats/ancestry-01-D3SuA5MaKucO1flE.htm
+++ b/data/feats/ancestry-01-D3SuA5MaKucO1flE.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your adaptability manifests in your mastery of a range of useful abilities.
-Avantage: Votre capacité d'adaptation se manifeste par la maîtrise d'un éventail de compétences utiles.
+Avantage: Vous obtenez un don de compétence général.
 
 ------ Description (en) ------
 <p>Your adaptability manifests in your mastery of a range of useful abilities. You gain a 1st-level general feat. You must meet the feat's prerequisites, but if you select this feat during character creation, you can select the feat later in the process in order to determine which prerequisites you meet.</p>
