--- a/data/feats/ancestry-01-Ds1waj86N4Z2gCMN.htm
+++ b/data/feats/ancestry-01-Ds1waj86N4Z2gCMN.htm
@@ -11,4 +11,4 @@ Avantage: Vos yeux sont vifs et habitués aux conditions hivernales.
 ------ Description (en) ------
 <p>Your eyes are keen and accustomed to winter conditions. You ignore concealment caused by ice and snow.</p>
 ------ Description (fr) ------
-<p>Vos yeux sont aiguisés et accoutumés aux conditions hivernales. Vous ignorez les camouflages fournis par la glace et la neige.</p>
+<p>Vos yeux sont vifs et accoutumés aux conditions hivernales. Vous ignorez les camouflages fournis par la glace et la neige.</p>
