--- a/data/feats/ancestry-01-E1sjYRb4zsZVrzrN.htm
+++ b/data/feats/ancestry-01-E1sjYRb4zsZVrzrN.htm
@@ -2,12 +2,11 @@ Name: Innocuous
 Nom: Inoffensif
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Halflings have been unobtrusive assistants of larger folk for untold ages, and your people count on this assumption of innocence.
-Avantage: Les Halflings ont été des assistants discrets des grands peuples pendant des siècles, et votre peuple compte sur cette présomption d'innocence.
+Avantage: Vous êtes qualifié en Duperie et savez détourner les soupçons.
 
 ------ Description (en) ------
 <p><strong>Access</strong> Jaric ethnicity<br /></p>
