--- a/data/feats/ancestry-01-dmEMftRe8P5iPDKo.htm
+++ b/data/feats/ancestry-01-dmEMftRe8P5iPDKo.htm
@@ -1,14 +1,14 @@
 Name: Brinesoul
-Nom: âme saumure
+Nom: Âme de saumure
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your elemental ancestor's legacy asserts itself as brackish water, like the seawater of the ocean.
-Avantage: L'héritage de votre ancêtre élémentaire s'affirme comme une eau saumâtre, comme l'eau de mer de l'océan.
+Avantage: Vous pouvez saler les blessures de vos adversaires.
 
 ------ Description (en) ------
 <p>Your elemental ancestor’s legacy asserts itself as brackish water, like the seawater of the ocean. You gain the @Compendium[pf2e.actionspf2e.b6CanpXyUKJgxEwq]{Salt Wound} reaction.</p>
 ------ Description (fr) ------
-<p>L'héritage élémentaire de votre ancêtre affirme lui-même l'eau saumâtre, comme l'eau de mer l'océan. Vous obtenez la réaction @Compendium[pf2e.actionspf2e.b6CanpXyUKJgxEwq]{Saler la blessure}.</p>
+<p>L'héritage élémentaire de votre ancêtre s'affirme comme de l'eau saumâtre, comme l'eau de mer de l'océan. Vous obtenez la réaction @Compendium[pf2e.actionspf2e.b6CanpXyUKJgxEwq]{Saler la blessure}.</p>
