--- a/data/feats/ancestry-01-D2tyUKQiDSq3JO1Z.htm
+++ b/data/feats/ancestry-01-D2tyUKQiDSq3JO1Z.htm
@@ -11,4 +11,4 @@ Avantage: Votre corps est robuste et peut résister à une perte de sang de faç
 ------ Description (en) ------
 <p>Your physique is robust and can withstand blood loss startlingly well. Whenever you would gain the @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drained}condition, you can attempt a DC 17 flat check. On a success, you don't gain the drained condition.</p>
 ------ Description (fr) ------
-<p>Vous avez une constitution robuste et qui peut supporter la perte de sang étonamment bien. Lorsque vous devriez recevoir l'état @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé}, vous pouvez tenter un test nu contre un DD17. Sur un succès, vous n'avez pas la condition Drainé.</p>
+<p>Vous avez une constitution robuste qui peut résister à une perte de sang de façon étonnante. Lorsque vous devriez recevoir l'état @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé}, vous pouvez tenter un test nu contre un DD17. Sur un succès, vous n'avez pas la condition Drainé.</p>
