--- a/data/feats/ancestry-01-DGtUIMliflzGXc6E.htm
+++ b/data/feats/ancestry-01-DGtUIMliflzGXc6E.htm
@@ -6,11 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your connection to the Boneyard ensures that your blows strike true against spectral beings.
-Avantage: Votre lien avec le Boneyard garantit que vos coups frappent bien les êtres spectraux.
+Avantage: Votre lien avec le Cimetière garantit que vos coups atteignent les êtres spectraux.
 
 ------ Description (en) ------
 <p>Your connection to the Boneyard ensures that your blows strike true against spectral beings.</p>
 <p>Your weapon and unarmed attack Strikes against incorporeal creatures become magical. If they are already magical, they instead gain the effects of a @Compendium[pf2e.equipment-srd.JQdwHECogcTzdd8R]{Ghost Touch} property rune.</p>
 ------ Description (fr) ------
 <p>Votre lien avec le Cimetière assure à vos coups de pouvoir frapper les êtres spectraux.</p>
-<p>Votre arme et vos Frappes à mains nues contre les créatures incorporelles deviennent magiques. Si elles sont déjà magiques, elles obtiennent alors les effets d'une rune de propriété @Compendium[pf2e.equipment-srd.JQdwHECogcTzdd8R]{Spectrale}.</p>
+<p>Votre arme et vos Frappes à mains nues contre les créatures intangibles deviennent magiques. Si elles sont déjà magiques, elles obtiennent alors les effets d'une rune de propriété @Compendium[pf2e.equipment-srd.JQdwHECogcTzdd8R]{Spectrale}.</p>
