--- a/data/feats/ancestry-01-DmcJtpMBSh3R5MHI.htm
+++ b/data/feats/ancestry-01-DmcJtpMBSh3R5MHI.htm
@@ -5,6 +5,10 @@ Avantage:
 PrereqFR: 
 État: libre
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Votre instinct vous permet de changer de forme.
+
 ------ Description (en) ------
 <p><strong>Trigger</strong> You roll initiative.</p>
 <hr />
