--- a/data/feats/ancestry-01-db0RHtFGhCfMx8vT.htm
+++ b/data/feats/ancestry-01-db0RHtFGhCfMx8vT.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Axis's order suffuses your body and helps it maintain coherency.
-Avantage: L'ordre d'Axis imprègne votre corps et l'aide à maintenir sa cohérence.
+Avantage: Votre cohérence permet de Soigner les blessures sans outils.
 
 ------ Description (en) ------
 <p>Axis’s order suffuses your body and helps it maintain coherency. You and your allies can Treat your Wounds without healer’s tools. Once per day, when someone rolls a failure or a critical failure on a check to Treat your Wounds, you can focus on your internal cohesion to increase the degree of success by one step.</p>
 ------ Description (fr) ------
-<p>L'ordre d'Axis couvre votre corps  et aide à maintenir sa cohérence. Vous et vos alliés pouvez Soigner vos blessures sans outils de guérisseur. Une fois par jour, lorsque quelqu'un obtient un échec un un échec critique sur un test de Soigner les blessures, vous pouvez vous focaliser sur votre cohésion interne pour augmenter le rang de succès d'un cran.</p>
+<p>L'ordre d'Axis imprègne votre corps et aide à maintenir sa cohérence. Vous et vos alliés pouvez Soigner vos blessures sans outils de guérisseur. Une fois par jour, lorsque quelqu'un obtient un échec un un échec critique sur un test pour Soigner les blessures, vous pouvez vous focaliser sur votre cohésion interne pour augmenter le rang de succès d'un cran.</p>
