--- a/data/feats/ancestry-01-eCWQU16hRLfN1KaX.htm
+++ b/data/feats/ancestry-01-eCWQU16hRLfN1KaX.htm
@@ -6,9 +6,9 @@ PrereqFR: âgé d'au moins 100 ans
 
 ------ Benefits and spoiler ----
 Benefits: Over your extensive lifespan, you've studied many languages.
-Avantage: Au cours de votre longue vie, vous avez étudié de nombreuses langues.
+Avantage: Vous êtes capable de vous rappeler de toutes les langues que vous avez rencontré.
 
 ------ Description (en) ------
 <p>Over your extensive lifespan, you've studied many languages. During your daily preparations, you can recede into old memories to become fluent in one common language or one other language you have access to. You know this language until you prepare again. Since this knowledge is temporary, you can't use it as a prerequisite for a permanent character option.</p>
 ------ Description (fr) ------
-<p>Du fait de votre durée de vie étendue, vous avez étudié bien des langues. Durant vos préparatifs quotidiens, vous pouvez plonger dans vos anciens souvenirs pour devenir capable de parler dans une langue commune ou une autre langue à laquelle vous pouvez avoir accès. Vous connaissez cette langue jusqu'à vos prochains préparatifs. Comme cette connaissance n'est que temporaire, vous ne pouvez l'utiliser comme un prérequis pour obtenir une option permanente pour votre personnage.</p>
+<p>Du fait de votre durée de vie étendue, vous avez étudié bien des langues. Durant vos préparatifs quotidiens, vous pouvez plonger dans vos anciens souvenirs pour devenir capable de parler dans une langue courante ou une autre à laquelle vous avez accès. Vous connaissez cette langue jusqu'à vos prochains préparatifs. Comme cette connaissance n'est que temporaire, vous ne pouvez l'utiliser comme un prérequis pour obtenir une option permanente pour votre personnage.</p>
