--- a/data/feats/ancestry-01-enRKfPyCLU5FMUOX.htm
+++ b/data/feats/ancestry-01-enRKfPyCLU5FMUOX.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You're unnaturally in tune with your surroundings and react instinctively to danger.
-Avantage: Tu es anormalement à l'écoute de ton environnement et tu réagis instinctivement au danger.
+Avantage: Vous bénéficiez d'un bonus de circonstances de +2 à l'initiative.
 
 ------ Description (en) ------
 <p>You’re unnaturally in tune with your surroundings and react instinctively to danger. You gain a +2 circumstance bonus to Perception checks made as initiative rolls.</p>
