--- a/data/feats/ancestry-01-EEJKztPOpy5utha9.htm
+++ b/data/feats/ancestry-01-EEJKztPOpy5utha9.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your nanites help purge your body of harmful chemicals and toxins.
-Avantage: Vos nanites aident à purger votre corps des produits chimiques nocifs et des toxines.
+Avantage: Vos nanites aident à lutter contre le poison.
 
 ------ Description (en) ------
 <p>Your nanites help purge your body of harmful chemicals and toxins. Each time you succeed at a Fortitude save against an ongoing poison, you reduce its stage by 2, or by 1 against a virulent poison. Each critical success you achieve against an ongoing poison reduces its stage by 3, or by 2 against a virulent poison.</p>
