--- a/data/feats/ancestry-01-EXVHePH8alsTZ5TB.htm
+++ b/data/feats/ancestry-01-EXVHePH8alsTZ5TB.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your lineage descends from devils, the conniving schemers of Hell's malevolent hierarchy.
-Avantage: Votre lignée descend des diables, les comploteurs de la hiérarchie malveillante de l'enfer.
+Avantage: Vous êtes qualifié en Duperie et en Connaissance des lois.
 
 ------ Description (en) ------
 <p>Your lineage descends from devils, the conniving schemers of Hell's malevolent hierarchy. You're as skilled at noticing lies and twisted wordings as you are at constructing them.</p>
