--- a/data/feats/ancestry-01-eEVZ19G2BAnHQZpa.htm
+++ b/data/feats/ancestry-01-eEVZ19G2BAnHQZpa.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your malfunctioning emotional processors make it difficult for you to feel strong emotions.
-Avantage: Le mauvais fonctionnement de vos processeurs émotionnels vous empêche de ressentir des émotions fortes.
+Avantage: Vous améliorez vos jets de sauvegarde contre les émotions fortes.
 
 ------ Description (en) ------
 <p>Your malfunctioning emotional processors make it difficult for you to feel strong emotions. You gain a +1 circumstance bonus to saving throws against emotion and fear effects. If you roll a success on a saving throw against an emotion or fear effect, you get a critical success instead.</p>
 ------ Description (fr) ------
-<p>Vos processeurs émotionnels dysfonctionnants rendent difficile que vous ressentiez des émotions fortes. Vous obtenez un bonus de circonstances de +1 aux jets de sauvegarde contre les effets d'émotion et de peur. Si vous obtenez un succès sur un jet de sauvegarde contre un effet de peur ou d'émotion, vous obtenez un succès critique à la place.</p>
+<p>Le mauvais fonctionnement de vos processeurs émotionnels vous empêche de ressentir des émotions fortes. Vous obtenez un bonus de circonstances de +1 aux jets de sauvegarde contre les effets d'émotion et de peur. Si vous obtenez un succès sur un jet de sauvegarde contre un effet de peur ou d'émotion, vous obtenez un succès critique à la place.</p>
