--- a/data/feats/ancestry-01-eWUTE7Ln3MwX6uer.htm
+++ b/data/feats/ancestry-01-eWUTE7Ln3MwX6uer.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You possess a strong understanding of process among mortals and lawful outsiders alike.
-Avantage: Vous avez une bonne compréhension des procédures entre mortels et étrangers légaux.
+Avantage: Vous êtes qualifié en Diplomatie et en Société.
 
 ------ Description (en) ------
 <p>You possess a strong understanding of process among mortals and lawful outsiders alike. The source of this knowledge might be intuition, study, or a childhood spent among other aphorites. You gain the trained proficiency rank in Diplomacy and Society. If you would automatically become trained in one of those skills (from your background or class, for example), you instead become trained in a skill of your choice. You also become trained in Axis Lore.</p>
 ------ Description (fr) ------
-<p>Vous possédez une compréhension forte de process parmi les mortels et des extérieurs loyaux. La source de cette connaissance pourrait provenir d'une intuition, d'une étude ou d'une enfance passée parmi d'autres aphorites. Vous êtes qualifié en Diplomatie et Société. Si vous devriez déjà être qualifié dans une de ces compétences (d'un historique ou d'une classe, par exemple), vous êts qualifié à la place dans une compétence de votre choix. Vous êtes aussi qualifié en Connaissance d'Axis.</p>
+<p>Vous possédez une compréhension forte des procédures parmi les mortels et les extérieurs loyaux. La source de cette connaissance pourrait provenir d'une intuition, de l'étude ou d'une enfance passée parmi d'autres aphorites. Vous êtes qualifié en Diplomatie et Société. Si vous devriez déjà être qualifié dans une de ces compétences (d'un historique ou d'une classe, par exemple), vous êts qualifié à la place dans une compétence de votre choix. Vous êtes aussi qualifié en Connaissance d'Axis.</p>
