--- a/data/feats/ancestry-01-ehvHedIwPcxq9cRt.htm
+++ b/data/feats/ancestry-01-ehvHedIwPcxq9cRt.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Whether keeping your balance or scrambling up a tricky climb, your hairy, calloused feet easily find purchase.
-Avantage: Qu'il s'agisse de garder l'équilibre ou de grimper une côte difficile, vos pieds poilus et calleux trouvent facilement leur place.
+Avantage: Qu'il s'agisse de garder l'équilibre ou d'entreprendre une ascension difficile, vos pieds poilus et calleux trouvent facilement une prise.
 
 ------ Description (en) ------
 <p>Whether keeping your balance or scrambling up a tricky climb, your hairy, calloused feet easily find purchase. If you roll a success on an Acrobatics check to Balance or an Athletics check to Climb, you get a critical success instead. You're not flat-footed when you attempt to Balance or Climb.</p>
