--- a/data/feats/ancestry-01-eqBWab1J5Be24YAl.htm
+++ b/data/feats/ancestry-01-eqBWab1J5Be24YAl.htm
@@ -6,11 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Growing up among catfolk has taught you the traditional values of freedom to travel, stewardship of the land, and quick reactions when your curiosity lands you in trouble.
-Avantage: En grandissant parmi les hommes-chats, vous avez appris les valeurs traditionnelles de la liberté de voyager, de l'intendance de la terre et des réactions rapides lorsque votre curiosité vous met en difficulté.
+Avantage: Vous êtes qualifié en Survie et en Acrobaties.
 
 ------ Description (en) ------
 <p>Growing up among catfolk has taught you the traditional values of freedom to travel, stewardship of the land, and quick reactions when your curiosity lands you in trouble.</p>
 <p>You gain the trained proficiency rank in Acrobatics and Survival. If you would automatically become trained in one of those skills (from your background or class, for example), you instead become trained in a skill of your choice. You also become trained in Catfolk Lore.</p>
 ------ Description (fr) ------
 <p>Être élevé parmi les hommes-félins vous a appris leurs valeurs traditionnelles que sont la liberté de voyager, l'administration des terres et les rapides réactions lorsque votre curiosité est source de problèmes.</p>
-<p>Vous obtenez le rang qualifié en Acrobaties et en Survie. Si vous devriez déjà être qualifié dans l'une de ces compétences (par le biais de votre historique ou de votre classe, par exemple), vous êtes qualifié avec une compétence de votre choix à la place. Vous êtes aussi qualifié en Connaissance des Hommes-félins.</p>
+<p>Vous obtenez le rang qualifié en Acrobaties et en Survie. Si vous devriez déjà être qualifié dans l'une de ces compétences (par le biais de votre historique ou de votre classe, par exemple), vous êtes qualifié dans une compétence de votre choix à la place. Vous êtes aussi qualifié en Connaissance des Hommes-félins.</p>
