--- a/data/feats/ancestry-01-H95Gh2nKUp9NKFuR.htm
+++ b/data/feats/ancestry-01-H95Gh2nKUp9NKFuR.htm
@@ -6,13 +6,13 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You draw shadows close to create a shroud.
-Avantage: Vous rapprochez les ombres pour créer un linceul.
+Avantage: Vous êtes plus difficile à toucher dans l'obscurité.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature attempts a flat check to target you while you’re @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed} or @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Hidden} due to dim light or darkness.</p>
 <hr />
 <p>You draw shadows close to create a shroud. Increase the DC of the flat check by 2.</p>
 ------ Description (fr) ------
-<p><strong>Déclencheur</strong> Une créature tente un test nu pour vous cibler alors que vous ciblez tandis que vous êtes @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} ou @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} à cause d'une lumière faible ou de l'obscurité.</p>
+<p><strong>Déclencheur</strong> Une créature tente un test nu pour vous cibler alors que vous êtes @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} ou @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} à cause d'une lumière faible ou de l'obscurité.</p>
 <hr />
-<p>Vous attirez le ombres pour créer un voile. Augmentez le DD du test nu de 2.</p>
+<p>Vous attirez les ombres pour créer un voile. Augmentez le DD du test nu de 2.</p>
