--- a/data/feats/ancestry-01-hSzNtRNwrma81Eeq.htm
+++ b/data/feats/ancestry-01-hSzNtRNwrma81Eeq.htm
@@ -2,12 +2,11 @@ Name: Life-Giving Magic
 Nom: Magie de la vie
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: The upwelling of innate magic refreshes your body.
-Avantage: La remontée de la magie innée rafraîchit votre corps.
+Avantage: L'incantation d'un sort inné ou ancestral vous accorde des points de vie temporaires.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per minute<br /><strong>Trigger</strong> You cast an innate spell from a gnome heritage or ancestry feat.<br /></p>
@@ -15,6 +14,6 @@ Avantage: La remontée de la magie innée rafraîchit votre corps.
 <p>The upwelling of innate magic refreshes your body. You gain a number of temporary Hit Points equal to half your level (minimum 1) that last until the end of your next turn.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par minute</p>
-<p><strong>Déclencheur</strong> Vous lancez un sort inné issu d'un héritage gnome ou d'un don d'ascendance.</p>
+<p><strong>Déclencheur</strong> Vous lancez un sort inné issu d'un héritage gnome ou d'un don ancestral.</p>
 <hr />
 <p>Le jaillissement de votre magie inné rafraichit votre corps. Vous obtenez un nombre de points de vie temporaires égal à la moitié de votre niveau (minimum 1) qui dure jusqu'à la fin de votre prochain tour.</p>
