--- a/data/feats/ancestry-01-hkMQGiTJCLVAWHy0.htm
+++ b/data/feats/ancestry-01-hkMQGiTJCLVAWHy0.htm
@@ -7,7 +7,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your interactions with other cultures on the surface have not only taught you about many other ancestries, but have also helped you realize the value of your own.
-Avantage: Vos interactions avec d'autres cultures à la surface vous ont non seulement appris à connaître de nombreuses autres ascendances, mais vous ont également aidé à prendre conscience de la valeur de la vôtre.
+Avantage: Vous êtes qualifié en Société et en Connaissance de votre culture.
 
 ------ Description (en) ------
 <p><strong>Access</strong> any surface dwarf ethnicity<br /></p>
