--- a/data/feats/ancestry-01-GYdLf1LhvSUeu95Y.htm
+++ b/data/feats/ancestry-01-GYdLf1LhvSUeu95Y.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your size and demeanor make it easy for you to convince others that you mean no harm.
-Avantage: Votre taille et votre comportement vous permettent de convaincre facilement les autres que vous ne voulez pas faire de mal.
+Avantage: Vous savez tirer parti des autres.
 
 ------ Description (en) ------
 <p>Your size and demeanor make it easy for you to convince others that you mean no harm. You gain the @Compendium[pf2e.feats-srd.KIK2Eza9TK47MEb2]{Shameless Request}skill feat as a bonus feat. Additionally, you gain a +1 circumstance bonus to initiative checks when you roll Deception for initiative.</p>
