--- a/data/feats/ancestry-01-HOXxEa7sAeAxpKHb.htm
+++ b/data/feats/ancestry-01-HOXxEa7sAeAxpKHb.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You're well connected to your tribe and perhaps even strix communities beyond your own, where you've learned about the land and techniques of graceful movement.
-Avantage: Vous êtes bien connecté à votre tribu et peut-être même à des communautés strix au-delà de la vôtre, où vous avez appris la terre et les techniques de mouvements gracieux.
+Avantage: Vous êtes qualifié en Acrobaties, en Nature et en Connaissance des Strix.
 
 ------ Description (en) ------
 <p>You’re well connected to your tribe and perhaps even strix communities beyond your own, where you’ve learned about the land and techniques of graceful movement. You gain the trained proficiency rank in Acrobatics and Nature. If you would automatically become trained in one of those skills (from your background or class, for example), you instead become trained in a skill of your choice. You also become trained in Strix Lore.</p>
 ------ Description (fr) ------
-<p>Vous êtes en parfaite connexion avec votre tribu et entretenez peut-être même des relations avec d'autres communautées strix, au sein desquelles vous avez pu vous familiariser avec la terre et les techniques élégantes de mouvement. Vous gagnez le rang de maîtrise qualifié en Acrobatie et en Nature. Si vous êtes déjà automatiquement qualifié dans l'une de ces compétences (grâce à votre historique ou à votre classe, par exemple), vous devenez alors qualifié dans une compétence de votre choix. Vous devenez également qualifié en Connaissance des Strix.</p>
+<p>Vous êtes en parfaite connexion avec votre tribu et entretenez peut-être même des relations avec d'autres communautés strix, au sein desquelles vous avez pu vous familiariser avec la terre et les techniques de déplacement élégantes. Vous gagnez le rang de maîtrise qualifié en Acrobaties et en Nature. Si vous êtes déjà automatiquement qualifié dans l'une de ces compétences (grâce à votre historique ou à votre classe, par exemple), vous devenez alors qualifié dans une compétence de votre choix. Vous devenez également qualifié en Connaissance des Strix.</p>
