--- a/data/feats/ancestry-01-Hmgy0GJKIawAiqHE.htm
+++ b/data/feats/ancestry-01-Hmgy0GJKIawAiqHE.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can tap into some of the magic that flows through your blood to give you new life.
-Avantage: Vous pouvez puiser dans la magie qui coule dans votre sang pour vous donner une nouvelle vie.
+Avantage: Incanter des sorts occultes ou innés vous accorde des points de vie temporaires.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per minute<br /><strong>Trigger</strong> You cast a non-cantrip occult spell or an innate spell from a changeling ancestry feat.</p>
@@ -14,6 +14,6 @@ Avantage: Vous pouvez puiser dans la magie qui coule dans votre sang pour vous d
 <p>You can tap into some of the magic that flows through your blood to give you new life. You gain a number of temporary Hit Points equal to half your level (minimum 1) that last until the end of your next turn.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par minute</p>
-<p><strong>Déclencheur</strong> Vous lancez un sort occulte ou un sort inné provenant d'un don d'ascendance de changelin qui ne sont pas des tours de magie.</p>
+<p><strong>Déclencheur</strong> Vous lancez un sort occulte ou un sort inné provenant d'un don ancestral de changelin qui ne sont pas des tours de magie.</p>
 <hr />
 <p>Vous pouvez puiser dans une partie de la magie qui coule dans votre sang pour vous donner de la vie. Vous obtenez un nombre de Points de vie temporaire égal à la moitié de votre niveau (minimum 1) qui dure jusqu'à la fin de votre prochain tour.</p>
