--- a/data/feats/ancestry-01-hxCqQPjlyVI57vQt.htm
+++ b/data/feats/ancestry-01-hxCqQPjlyVI57vQt.htm
@@ -6,7 +6,7 @@ PrereqFR: Vision nocturne
 
 ------ Benefits and spoiler ----
 Benefits: You can see in the darkness as easily as a psychopomp.
-Avantage: Vous pouvez voir dans l'obscurité aussi facilement qu'un psychopompe.
+Avantage: Vous obtentez Vision dans le noir.
 
 ------ Description (en) ------
 <p>You can see in the darkness as easily as a psychopomp. You gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision}.</p>
